更新修改过的博文

--- a/blog.mauve.icu/个人网络 + NAS 折腾日记-1.html
+++ b/blog.mauve.icu/个人网络 + NAS 折腾日记-1.html
@@ -3,11 +3,11 @@
 <p>title: 个人网络 + NAS 折腾日记-1
 date: 2023-11-07 08:27:24
 updated: 2023-11-07 08:27:24
-categories:
-tag:</p>
+categories:</p>
 <ul>
-<li>ACM</li>
-<li>总结
+<li>杂项
+tag:</li>
+<li>NAS
 math: true
 mermaid: true
 hide: true</li>
