--- a/kexizeroing.github.io/Bitwise operations.html
+++ b/kexizeroing.github.io/Bitwise operations.html
@@ -63,3 +63,11 @@ int t = (data[c] - 128) &gt;&gt; 31;
 sum += ~t &amp; data[c];
 </code></pre>
 <p>Arithmetically shift right by 31, it becomes either all ones if it is smaller than 128 or all zeros if it is greater or equal to 128. (0111 -&gt; 0011 -&gt; 0001 -&gt; 0000 or 1000 -&gt; 1100 -&gt; 1110 -&gt; 1111). The second line adds to the sum either <code>0xFFFFFFFF &amp; data[c]</code> (so <code>data[c]</code>) in the case that <code>data[c] &gt;= 128</code>, or <code>0 &amp; data[c]</code> (so zero) in the case that <code>data[c] &lt; 128</code>.</p>
+<h3>How big is 10 MB anyway?</h3>
+<p>If you are dealing with characters, it will depend on the charset/encoding.</p>
+<ul>
+<li>An ASCII character in 8-bit ASCII encoding is 8 bits (1 byte), though it can fit in 7 bits.</li>
+<li>A Unicode character in UTF-8 encoding is between 8 bits (1 byte) and 32 bits (4 bytes).</li>
+<li>A Unicode character in UTF-16 encoding is between 16 (2 bytes) and 32 bits (4 bytes), though most of the common characters take 16 bits. This is the encoding used by Windows internally.</li>
+</ul>
+<p>What is the average size of JavaScript code downloaded per website? It seems like shipping 10 MB of code is normal now. If we assume that the average code line is about 65 characters, that would mean we are shipping ~150,000 lines of code.</p>
