--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -29,7 +29,7 @@ order: 2</h2>
 <p>Artificial Intelligence for Beginners: https://github.com/microsoft/AI-For-Beginners</p>
 <p>Generative AI for Beginners: https://github.com/microsoft/generative-ai-for-beginners</p>
 <p>90DaysOfDevOps: https://github.com/MichaelCade/90DaysOfDevOps</p>
-<p>Amazon Web Services — a practical guide: https://github.com/open-guides/og-aws</p>
+<p>Explain complex systems using visuals and simple terms: https://github.com/ByteByteGoHq/system-design-101</p>
 <p>Beginner's TypeScript tutorial: https://www.totaltypescript.com/tutorials</p>
 <p>Why web tech is like this: https://www.youtube.com/watch?v=3QEoJRjxnxQ</p>
 <p>A year-end celebration of fundamental web technologies: https://12daysofweb.dev</p>
@@ -84,6 +84,7 @@ order: 2</h2>
 <p>Remote desktop environment in the browser: https://github.com/HeyPuter/puter</p>
 <p>See Core Web Vitals and PageSpeed Insights results simply and easily: https://page-speed.dev</p>
 <p>Feature management for developers with GitOps: https://github.com/featurevisor/featurevisor</p>
+<p>Awesome Web Apps that work without login: https://github.com/aviaryan/awesome-no-login-web-apps</p>
 <hr/>
 <h2>CSS related</h2>
 <p>Modern CSS Solutions for Old CSS Problems: https://moderncss.dev</p>
@@ -116,6 +117,7 @@ order: 2</h2>
 <p>What You Need to Know about Modern CSS: https://frontendmasters.com/blog/what-you-need-to-know-about-modern-css-spring-2024-edition</p>
 <p>Compare web animation techniques by bouncing a ball: https://sparkbox.github.io/bouncy-ball</p>
 <p>A Friendly Introduction to Spring Physics: https://www.joshwcomeau.com/animation/a-friendly-introduction-to-spring-physics</p>
+<p>The Collection of CSS-only Shapes: https://css-shape.com</p>
 <hr/>
 <h2>FE dev resources</h2>
 <p>GUI Challenges: https://www.youtube.com/playlist?list=PLNYkxOF6rcIAaV1wwI9540OC_3XoIzMjQ</p>
@@ -155,10 +157,10 @@ order: 2</h2>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: https://egghead.io/courses/the-beginner-s-guide-to-react or https://www.youtube.com/watch?v=7_x4AuqHxlg</p>
+<p>Epic Web React Fundamentals: https://react-fundamentals.epicweb.dev</p>
 <p>Getting Closure on React Hooks by Shawn Wang: https://www.youtube.com/watch?v=KJP1E-Y-xyo</p>
 <p>Building a Custom React Renderer by Sophie Alpert: https://www.youtube.com/watch?v=CGpMlWVcHok</p>
 <p>All Developer Way Articles about React: https://www.developerway.com</p>
-<p>Guide to React Rendering Behavior: https://blog.isquaredsoftware.com/2020/05/blogged-answers-a-mostly-complete-guide-to-react-rendering-behavior</p>
 <p>Build your own React: https://pomb.us/build-your-own-react</p>
 <p>A collection of React hooks from the ui.dev team: https://usehooks.com</p>
 <p>React hook library, ready to use, written in Typescript: https://github.com/juliencrn/usehooks-ts</p>
@@ -169,6 +171,7 @@ order: 2</h2>
 <p>Learn Next.js Server Side Rendering: https://dev.to/skirianov/learn-nextjs-server-side-rendering-by-building-your-own-implementation-41m8</p>
 <p>React from Another Dimension by Dan Abramov at RemixConf: https://www.youtube.com/watch?v=zMf_xeGPn6s</p>
 <p>Learn Next.js course by Vercel: https://nextjs.org/learn</p>
+<p>React's evolution from Hooks to Concurrent React: https://tigerabrodi.blog/reacts-evolution-from-hooks-to-concurrent-react</p>
 <hr/>
 <h2>Vue and Vite ecosystem</h2>
 <p>Updates, tips &amp; opinions from the maintainers of Vue.js: https://blog.vuejs.org</p>
@@ -180,8 +183,7 @@ order: 2</h2>
 <p>Vue Composables putting your components in motion: https://github.com/vueuse/motion</p>
 <p>Declarative ThreeJS using Vue Components: https://tresjs.org</p>
 <p>Unified plugin system for build tools: https://github.com/unjs/unplugin</p>
-<p>Auto import APIs on-demand for Vite, Webpack and Rollup: https://github.com/antfu/unplugin-auto-import</p>
-<p>On-demand components auto importing for Vue: https://github.com/antfu/unplugin-vue-components</p>
+<p>On-demand components auto importing for Vue: https://github.com/unplugin/unplugin-vue-components</p>
 <p>A lightweight, customizable Vue UI library for mobile web apps: https://vant-ui.github.io</p>
 <p>Modular and Accessible UI Components for your Vue Applications (Made for Vue 2.x): https://vue.chakra-ui.com</p>
 <p>Vue port of Radix UI Primitives: https://www.radix-vue.com</p>
@@ -197,19 +199,20 @@ order: 2</h2>
 <p>What's New in DevTools (Articles): https://developer.chrome.com/tags/new-in-devtools</p>
 <p>What's New in DevTools (Videos): https://www.youtube.com/playlist?list=PLNYkxOF6rcIBDSojZWBv4QJNoT4GNYzQD</p>
 <p>Safari Release Notes: https://developer.apple.com/documentation/safari-release-notes/</p>
+<p>Firefox release notes: https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Releases</p>
 <p>New to the web platform (every month): https://web.dev/blog/web-platform-01-2024</p>
 <hr/>
 <h2>Awesome ChatGPT</h2>
 <p>OpenAI Cookbook: https://github.com/openai/openai-cookbook</p>
 <p>Awesome ChatGPT Prompts: https://prompts.chat</p>
-<p>Node.js client for the official ChatGPT API: https://github.com/transitive-bullshit/chatgpt-api</p>
+<p>Prompt Engineering Guide: https://github.com/dair-ai/Prompt-Engineering-Guide</p>
 <p>An open-source ChatGPT UI: https://github.com/mckaywrigley/chatbot-ui</p>
 <p>A universal local knowledge base solution: https://github.com/GanymedeNil/document.ai</p>
 <p>Local knowledge based ChatGLM with langchain: https://github.com/imClumsyPanda/langchain-ChatGLM</p>
 <p>Translate your locale json files: https://github.com/ObservedObserver/chatgpt-i18n</p>
 <p>Share your wildest ChatGPT conversations with one click: https://sharegpt.com</p>
 <p>A chat assistant fine-tuned from LLaMA on user-shared conversations: https://vicuna.lmsys.org</p>
-<p>ChartGPT - text to beautiful charts: https://www.chartgpt.dev</p>
+<p>Chatbot Arena - Benchmarking LLMs in the Wild: https://chat.lmsys.org</p>
 <p>Interact privately with your documents using LLMs: https://github.com/imartinez/privateGPT</p>
 <p>Understanding GPT tokenizers: https://simonwillison.net/2023/Jun/8/gpt-tokenizers/</p>
 <p>Catching up on the weird world of LLMs: https://simonwillison.net/2023/Aug/3/weird-world-of-llms/</p>
@@ -222,16 +225,17 @@ order: 2</h2>
 <p>An alternative take on OpenAI Chat Completion API: https://gpt.pomb.us</p>
 <p>Create LlamaIndex App: https://www.npmjs.com/package/create-llama</p>
 <p>Get up and running with large language models locally: https://ollama.com</p>
+<p>Run AI with an API: https://replicate.com</p>
 <p>Fully client-side chat over documents: https://github.com/jacoblee93/fully-local-pdf-chatbot</p>
 <p>Real-time image generation with Latent Consistency: https://www.fal.ai/dynamic</p>
-<p>Get started with the Gemini API: https://ai.google.dev/docs</p>
+<p>Get started with the Gemini API: https://ai.google.dev/gemini-api/docs</p>
 <p>Google AI SDK for JavaScript: https://github.com/google/generative-ai-js</p>
 <p>Generative UI chatbot using the Vercel AI SDK and Google Gemini: https://github.com/vercel-labs/gemini-chatbot</p>
 <p>Hugging Chat Assistant (similar to OpenAI GPTs): https://huggingface.co/chat/assistants</p>
 <p>Pi, your personal AI from Inflection: https://pi.ai</p>
-<p>Suno is building a future where anyone can make great music: https://www.suno.ai</p>
 <p>Power your apps with real-time speech-to-text APIs: https://deepgram.com</p>
 <p>Run Hugging Face Transformers directly in the browser: https://github.com/xenova/transformers.js</p>
+<p>Framework for Multi AI Agents Systems: https://github.com/joaomdmoura/crewai</p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Stanford CS229 Machine Learning: https://cs229.stanford.edu</p>
@@ -241,7 +245,7 @@ order: 2</h2>
 <p>Stanford CS224N - Natural Language Processing with Deep Learning: https://web.stanford.edu/class/cs224n/index.html</p>
 <p>Princeton Natural Language Processing: https://princeton-nlp.github.io/cos484</p>
 <p>Understanding Large Language Models: https://www.cs.princeton.edu/courses/archive/fall22/cos597G</p>
-<p>Stanford CS324 - Advances in Foundation Models: https://stanford-cs324.github.io/winter2023</p>
+<p>Big Data Machine Learning Algorithms: https://yishuai.github.io/bigalgo</p>
 <p>Transformers from Scratch: https://e2eml.school/transformers.html</p>
 <p>ML for front-end developers: https://docs.google.com/presentation/d/1f--c4Ui1VcmVgW4Gj3v-e_17GYfxRlbUSMnyk4sOVjg</p>
 <p>Machine Learning for Web Developers: https://www.youtube.com/playlist?list=PLOU2XLYxmsILr3HQpqjLAUkIPa5EaZiui</p>
