--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -6,7 +6,7 @@ slug: debugging-css
 description: ""
 added: "Oct 10 2021"
 tags: [css]
-updatedDate: "Feb 28 2024"</h2>
+updatedDate: "May 5 2024"</h2>
 <ul>
 <li><p>A fundamental concept for CSS layout is inline vs. block elements. Inline means elements only take up the space they need, and do not affect flow. Applying <code>margin</code> or <code>padding</code> to an inline element will only work in the "inline" direction (left/right) not the "block" direction (top/bottom).</p>
 </li>
@@ -28,7 +28,7 @@ updatedDate: "Feb 28 2024"</h2>
 </li>
 <li><p>The <code>::before</code> pseudo-element becomes the first child of its parent, whereas <code>::after</code> is added as the last child. The default display value of a pseudo-element is <code>inline</code>. So when you add a width, height, vertical padding or vertical margin, it won’t work unless the <code>display</code> type is changed.</p>
 </li>
-<li><p>By default, the <code>color</code> property is inherited by child elements such as <code>p</code> and <code>span</code>. Instead of setting the color property on each element, add it to the <code>body</code>, and then all <code>p</code> and <code>span</code> elements will inherit that color. However, the <code>a</code> element doesn’t inherit <code>color</code> by default. You can override its color or use the <code>inherit</code> keyword.</p>
+<li><p>By default, the <code>color</code> property is inherited by child elements such as <code>p</code> and <code>span</code>. Instead of setting the color property on each element, add it to the <code>body</code>, and then all <code>p</code> and <code>span</code> elements will inherit that color. However, the <code>a</code>, <code>input</code>, or <code>button</code> element doesn’t inherit <code>color</code> by default. You can override its color or use the <code>inherit</code> keyword (to inherit those non-inheritable properties.)</p>
 </li>
 <li><p>A common mistake when showing a border on hover is to add the border only on hover. If the border is 1 pixel, then the element will jump by that much when the user hovers over it. To avoid the jump, add the border to the normal state with a transparent color.</p>
 </li>
@@ -137,7 +137,18 @@ body:after {
 </li>
 <li><p>A dialog is a component in a web page or app that usually contains an action or some task to perform. Dialogs have a role of <code>dialog</code>, which the browser will assign automatically for you when you use the <code>&lt;dialog&gt;</code> element. You can also create dialogs with ARIA: apply <code>role="dialog"</code> to an element like <code>&lt;div&gt;</code>. If it is a modal dialog, add <code>aria-modal="true"</code> when it shows, and remove it when it is dismissed. Dialogs can be modal (when shown with <code>dialog.showModal()</code>) or non modal (when shown with <code>dialog.show()</code>). When <code>&lt;dialog&gt;</code>s are modal, the browser will treat the content outside of the dialog as inert, and prevent keyboard focus from reaching web content outside of the dialog. If a <code>&lt;dialog&gt;</code> is not modal, the other content is not treated as inert. Browsers will close modal dialogs when users press <code>Escape</code>. Non-modal dialogs don't get this default behaviour, developers can add it where it makes sense. Check out the <a href="https://talks.hiddedevries.nl/G9mATs/slides">slides</a> about how to build dialogs and popovers.</p>
 </li>
-<li><p>CSS <code>unset</code> will remove all properties set directly on the matched element, and revert to inheriting from the cascade - like a parent element or <code>&lt;body&gt;</code> (if the property naturally inherits from its parent); <code>inherit</code> is pretty straight-forward that inherits all defined properties from its parent element. CSS <code>initial</code> reverts to browser defaults.</p>
+<li><p>CSS <code>unset</code> will remove all properties set directly on the matched element, and revert to inheriting from the cascade - like a parent element or <code>&lt;body&gt;</code> (if the property naturally inherits from its parent); <code>inherit</code> is pretty straight-forward that inherits all defined properties from its parent element. <code>revert</code> will set the property to the user agent stylesheet value — AKA the default browser style. <code>initial</code> is the nuclear option. This will set the value back to the element’s CSS specification value, which means it’s gonna remove the style all together.</p>
+<pre><code class="language-html">&lt;!-- What color is the &lt;p&gt; tag’s text? --&gt;
+&lt;!-- The answer is red since unset “unsets” the style of the p tag, 
+so it inherits from its parent – body. --&gt;
+&lt;p class="hello"&gt;Hello&lt;/p&gt;
+
+&lt;style&gt;
+  body { color: red; }
+  p { color: green; }
+  .hello { color: unset; }
+&lt;/style&gt;
+</code></pre>
 </li>
 <li><p>Stop re-inventing the wheel and just use <code>&lt;button&gt;</code> to create a button. If you're worried about default button styles, use <code>all: unset</code>. This one line of CSS will strip all default browser styles so you can apply your own.</p>
 </li>
