--- a/kexizeroing.github.io/Fetch API requests and CORS.html
+++ b/kexizeroing.github.io/Fetch API requests and CORS.html
@@ -115,6 +115,21 @@ function fetchVideo() {
     });
 }
 </code></pre>
+<p>You can use <code>AbortSignal.timeout()</code> to automatically create the abort signal which will abort after that duration (without the boilerplate of using <code>AbortController</code>).</p>
+<pre><code class="language-js">try {
+  const res = await fetch(url, { signal: AbortSignal.timeout(5000) });
+  const result = await res.blob();
+  // …
+} catch (err) {
+  if (err.name === "TimeoutError") {
+    console.error("Timeout: It took more than 5 seconds to get the result.");
+  } else if (err.name === "AbortError") {
+    console.error("Fetch aborted by user action"),
+  } else if (err.name === "TypeError") {
+    console.error("AbortSignal.timeout() method is not supported");
+  }
+}
+</code></pre>
 <h3>Build on Fetch</h3>
 <ul>
 <li><a href="https://github.com/elbywan/wretch">wretch</a> is a tiny wrapper built around fetch.</li>
