--- a/kexizeroing.github.io/Frontend interview questions.html
+++ b/kexizeroing.github.io/Frontend interview questions.html
@@ -12,7 +12,7 @@ updatedDate: "Apr 7 2024"</h2>
 <ul>
 <li>https://hzfe.github.io/awesome-interview</li>
 <li>https://github.com/Sunny-117/js-challenges</li>
-<li>https://github.com/lydiahallie/advanced-web-dev-quiz</li>
+<li>https://github.com/tigerabrodi/data-structures-and-algorithms-javascript</li>
 </ul>
 <hr/>
 <ol>
@@ -68,6 +68,7 @@ concurrencyRequest(urls, 3).then(res =&gt; {
   console.log(res);
 })
 </code></pre>
+<p><code>Promise.all</code> 用来并发处理异步任务，但是并发数有时候需要限制，多个并发请求可能会对服务端产生压力，<a href="https://github.com/sindresorhus/p-limit">p-limit</a> 这个库就是用来限制并发数的。核心原理就是在一个循环中，从请求池中取出请求并发送，直到当前并发请求数 current 达到最大并发数或请求池 queue 变为空。对于每个出队的请求，它首先增加 current 的值，然后调用函数来发送请求。当请求完成后，它会减少 current 的值并再次调用出队函数，处理下一个请求。类似的库有很多，可以看看 https://github.com/sindresorhus/promise-fun</p>
 <ol start="2">
 <li>Implement <code>Promise.all</code> by yourself.</li>
 </ol>
