--- a/kexizeroing.github.io/Learn 1-Line Layouts from Una.html
+++ b/kexizeroing.github.io/Learn 1-Line Layouts from Una.html
@@ -164,4 +164,4 @@ footer {
   aspect-ratio: 16 / 9;
 }
 </code></pre>
-<p>With the <code>aspect-ratio</code> property, as I resize the card, the visual block maintains this 16 x 9 aspect ratio. You can make a square with <code>1 / 1</code> ratio, a 2 to 1 ratio with <code>2 / 1</code>, and really just anything you need for the image or video to scale with a set size ratio.</p>
+<p>With the <code>aspect-ratio</code> property, as I resize the card, the visual block maintains this 16 x 9 aspect ratio. You can make a square with <code>1 / 1</code> ratio, a 2 to 1 ratio with <code>2 / 1</code>, and really just anything you need for the image or video to scale with a set size ratio. Note that if both a height and width are set on an element, then <code>aspect-ratio</code> is ignored.</p>
