--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -39,6 +39,9 @@ new Vue({
   }
 })
 </code></pre>
+<blockquote>
+<p>Vue 是如何被编译的中文博客系列：https://juejin.cn/column/7340830470463242278</p>
+</blockquote>
 <p>Vue 3 在 2022 年 2 月代替 Vue 2 成为 Vue 的默认版本。</p>
 <ul>
 <li><a href="https://github.com/vitejs/vite/tree/main/packages/create-vite">create-vite</a> 是 Vite 官方推荐的一个脚手架工具，可以创建基于 Vite 的不同技术栈基础模板。<code>npm create vite</code> 可创建一个基于 Vite 的基础空项目。</li>
