--- a/kexizeroing.github.io/React 18 Suspense and startTransition.html
+++ b/kexizeroing.github.io/React 18 Suspense and startTransition.html
@@ -90,6 +90,7 @@ startTransition(() =&gt; {
   )
 }
 </code></pre>
+<p>If we didn't use <code>useDeferredValue</code>, the expensive computation ("List" component here) would run on every keystroke, which could lead to performance issues. By deferring the update of the text value, we ensure that the expensive computation only runs when the text value has stabilized. <em>If React gets interrupted by another state change, the important stuff has already been updated. React can abandon the less-important second render, and start work immediately on the more-important part.</em></p>
 <h2>New Suspense Features</h2>
 <p>Suspense allows you to render a fallback component while a component is waiting for some asynchronous operations.</p>
 <p>Suspense (React 16) on the client. It would throw an error when used in SSR. Suspense and code-splitting using <code>React.lazy</code> were not compatible with SSR, until React 18.</p>
