--- a/kexizeroing.github.io/React hooks clone.html
+++ b/kexizeroing.github.io/React hooks clone.html
@@ -88,6 +88,59 @@ var App = React.render(Component);
   {count: 2, text: "pear"}`
 */
 </code></pre>
+<h3>Vanilla React useQeury Hook</h3>
+<pre><code class="language-js">import * as React from "react"
+
+export default function useQuery(url) {
+  const [data, setData] = React.useState(null)
+  const [isLoading, setIsLoading] = React.useState(true)
+  const [error, setError] = React.useState(null)
+
+  React.useEffect(() =&gt; {
+    let ignore = false
+
+    const handleFetch = async () =&gt; {
+      setData(null)
+      setIsLoading(true)
+      setError(null)
+
+      try {
+        const res = await fetch(url)
+
+        if (ignore) {
+          return 
+        }
+
+        if (res.ok === false) {
+          throw new Error(`A network error occurred.`)
+        }
+
+        const json = await res.json()
+
+        setData(json)
+        setIsLoading(false)
+      } catch (e) {
+        setError(e.message)
+        setIsLoading(false)
+      }
+    }
+
+    handleFetch()
+
+    return () =&gt; {
+      ignore = true
+    }
+  }, [url])
+
+  return { data, isLoading, error }
+}
+</code></pre>
+<blockquote>
+<ol>
+<li>React Query should be used instead: https://ui.dev/why-react-query</li>
+<li>More custom hooks explained here: https://github.com/tigerabrodi/50-react-hooks</li>
+</ol>
+</blockquote>
 <h3>Higher Order Components</h3>
 <p>HOCs are wrapper components that help provide additional functionality to existing components. While hooks probably replaced most of shared logic concerns, there are still use cases where higher-order components could be useful. For example, you want to fire analytics event on every click of every button, dropdown and link everywhere.</p>
 <pre><code class="language-js">export const withLoggingOnClick = (Component) =&gt; {
