--- a/kexizeroing.github.io/Rendering performance.html
+++ b/kexizeroing.github.io/Rendering performance.html
@@ -15,7 +15,7 @@ updatedDate: "Feb 29 2024"</h2>
 <li><strong>First Input Delay (FID)</strong>: measures interactivity. To provide a good user experience, pages should have a FID of 100 milliseconds or less.</li>
 <li><strong>Cumulative Layout Shift (CLS)</strong>: measures visual stability. To provide a good user experience, pages should maintain a CLS of 0.1 or less.</li>
 </ul>
-<p><a href="https://web.dev/inp/">Interaction to Next Paint (INP)</a> is a pending Core Web Vital metric that will replace First Input Delay (FID) in March 2024. INP is a metric that assesses a page's overall responsiveness to user interactions by observing the latency of all click, tap, and keyboard interactions that occur throughout the lifespan of a user's visit to a page.</p>
+<p><a href="https://web.dev/inp/">Interaction to Next Paint (INP)</a> is a pending Core Web Vital metric that will replace First Input Delay (FID) in March 2024. INP is a metric that assesses a page's overall responsiveness to user interactions by observing the latency of all click, tap, and keyboard interactions that occur throughout the lifespan of a user's visit to a page. <em>When reacting to user input, a response slower than <code>200ms</code> will be perceived as having to wait.</em></p>
 <p>While the Core Web Vitals are the critical metrics for understanding and delivering a great user experience, there are other vital metrics as well. For example, the metrics <strong>Time to First Byte (TTFB)</strong> and <strong>First Contentful Paint (FCP)</strong> are both vital aspects of the loading experience.</p>
 <ul>
 <li>TTFB is a good measure of your server response times and general back-end health, and issues here may have knock-on effects later down the line.</li>
@@ -117,7 +117,10 @@ window.performance.getEntriesByType('resource')
   .forEach(({name}) =&gt; console.log(name))
 </code></pre>
 <h3>The Speculation Rules API</h3>
-<p>https://developer.chrome.com/blog/prerender-pages/</p>
+<ul>
+<li>https://developer.chrome.com/docs/web-platform/prerender-pages</li>
+<li>https://developer.chrome.com/docs/devtools/application/debugging-speculation-rules</li>
+</ul>
 <p>A page can be prerendered in either of two ways, all of which aim to make navigations quicker:</p>
 <ol>
 <li>When you type a URL into the Chrome omnibox, Chrome may automatically prerender the page for you, if it has high confidence you will visit that page. (View Chrome's predictions for URLs in the <code>chrome://predictors</code> page)</li>
@@ -136,7 +139,7 @@ window.performance.getEntriesByType('resource')
 }
 &lt;/script&gt;
 </code></pre>
-<p>Speculation rules can also be used to just prefetch pages, without a full prerender. Unlike the older <code>&lt;link rel="prefetch"&gt;</code> resource hint which just prefetched to the HTTP cache, documents loaded via speculation rules are processed in the same way that navigations are (but then not rendered) and are held in memory so will be available quicker to the browser once needed.</p>
+<p>Speculation rules can also be used to just prefetch pages, without a full prerender. Unlike the older <code>&lt;link rel="prefetch"&gt;</code> resource hint which just prefetched to the HTTP disk cache, documents loaded via speculation rules are processed in the same way that navigations are (but then not rendered) and are held in memory so will be available quicker to the browser once needed. <em>Prefetch speculation rules only prefetch the document, not its subresources.</em></p>
 <pre><code class="language-html">&lt;script type="speculationrules"&gt;
 {
   "prefetch": [
