--- a/kexizeroing.github.io/SWR, SWC, and MSW.html
+++ b/kexizeroing.github.io/SWR, SWC, and MSW.html
@@ -75,6 +75,9 @@ function Profile () {
   )
 }
 </code></pre>
+<blockquote>
+<p><a href="https://github.com/Kong/swrv">swrv</a> is a port of SWR for Vue, a Vue library for data fetching.</p>
+</blockquote>
 <h3>React Query</h3>
 <p>SWR and React Query (new name: TanStack Query) are the two most popular libraries that can be used to manage data fetching in a React application. SWR is a smaller library that focuses on providing a simple way to fetch and cache data, while React Query is a more comprehensive library that offers a wider range of features.</p>
 <pre><code class="language-jsx">// Standard fetch in useEffect example
@@ -131,6 +134,7 @@ function Bookmarks({ category }) {
 <li>The network is reconnected (<code>refetchOnReconnect</code>)</li>
 <li>The query is optionally configured with a refetch interval (<code>refetchInterval</code>)</li>
 </ul>
+<p>As long as a query is being actively used, the cached data will be kept in memory. What about inactive queries? <code>gcTime</code> is the duration until inactive queries will be removed from the cache. This defaults to 5 minutes, which means that if a query is not being used for 5 minutes, the cache for that query will be cleaned up.</p>
 <h2>SWC - Rust-based platform for the Web</h2>
 <p>SWC (stands for Speedy Web Compiler) is a super-fast TypeScript / JavaScript compiler written in Rust, and can be used for both compilation and bundling. SWC is 20x faster than babel on a single-core benchmark, 68x faster than babel on a multicore benchmark.</p>
 <pre><code class="language-sh">npm i -D @swc/cli @swc/core
