--- a/kexizeroing.github.io/Server-sent events with examples.html
+++ b/kexizeroing.github.io/Server-sent events with examples.html
@@ -233,7 +233,12 @@ return new Response(
 )
 </code></pre>
 <h2>Download streamed data using vanilla JavaScript</h2>
-<pre><code class="language-js">// Create an AbortController to control and cancel the fetch request, 
+<blockquote>
+<p>Consume Web streams from OpenAI using vanilla JavaScript: https://umaar.com/dev-tips/269-web-streams-openai/</p>
+</blockquote>
+<pre><code class="language-js">const url = "https://api.openai.com/v1/chat/completions";
+const apiKey = `your_api_key_here`;
+// Create an AbortController to control and cancel the fetch request, 
 // when the user hits the stop button.
 const controller = new AbortController();
 
@@ -258,6 +263,7 @@ const response = await fetch(url, {
 const decoder = new TextDecoder();
 
 // Iterate through the chunks in the response body using `for-await...of`
+// https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/for-await...of
 for await (const chunk of response.body) {
   const decodedChunk = decoder.decode(chunk);
 
