--- a/kexizeroing.github.io/Using ES modules.html
+++ b/kexizeroing.github.io/Using ES modules.html
@@ -6,7 +6,7 @@ slug: using-es-modules
 description: ""
 added: "Aug 12 2020"
 tags: [js]
-updatedDate: "Apr 02 2023"</h2>
+updatedDate: "May 5 2024"</h2>
 <h2>ES Modules</h2>
 <p>While Node.js has been using the CommonJS standard for years and there are a number of JavaScript libraries and frameworks that enable module usage, the browser never had a module system. A module system must be first standardized by ECMAScript and then implemented by the browser. The good news is that modern browsers have started to support module functionality natively, and the use of native JavaScript modules is dependent on the <em>import</em> and <em>export</em> statements. <strong>The import and export statements cannot be used in embedded scripts unless such script has a <code>type="module"</code></strong>.</p>
 <h3>Exporting module features</h3>
@@ -142,3 +142,15 @@ export const foo = cjsModule.foo;
 </code></pre>
 </li>
 </ol>
+<p><strong>Updates for Node.js 22:</strong> Support for require()ing ESM graphs is now enabled through experimental flag. We intend to enable it by default in the future to allow package authors to publish ESM-only packages while maintaining support for CJS users, and help the ecosystem migrate to ESM incrementally.</p>
+<pre><code class="language-js">// Define a module in a file named 'math-utils.mjs'
+export function square(x) {
+  return x ** 2;
+}
+
+// main.js - ​Synchronously require the ES module in a CommonJS file
+// $ node --experimental-require-module main.js
+const mathUtils = require('./math-utils.mjs');
+​
+console.log(mathUtils.square(2));
+</code></pre>
