--- a/lutaonan.com/不上班的第一年.html
+++ b/lutaonan.com/不上班的第一年.html
@@ -9,7 +9,7 @@ pin: true</h2>
 <p>首先是我的产出，这一年我的产出主要是两个产品、一个播客。</p>
 <h2>两个产品</h2>
 <h3>Notepal</h3>
-<p><img alt="notepal" src="/imgs/image-20240514220123411.png"/></p>
+<p><img alt="alt text" src="/imgs/image-20240514220123411.jpeg"/></p>
 <p>离职后第一个认真做的产品是 <a href="https://notepal.randynamic.org/">Notepal</a>, 这是一个用于把微信读书笔记同步到各个笔记应用的插件。我在<a href="https://lutaonan.com/blog/my-extension-sold-1k-yuan">这篇文章</a>详细写过这个产品的起源和在做这个产品的时候的一些思考。我在做这个产品的时候完全没有想到，这个只卖 50 块的插件，在这一年帮我付了我一整年的房租。</p>
 <h3>EpubKit</h3>
 <p><img alt="epubkit" src="/imgs/intro-CPIiIzFW.png"/></p>
