--- a/tifa-233.com/Namomo Spring Camp 2022 Div1 每日一题记录 (Week 3).html
+++ b/tifa-233.com/Namomo Spring Camp 2022 Div1 每日一题记录 (Week 3).html
@@ -214,7 +214,7 @@ $$</p>
 <pre><code class="language-output1">4
 </code></pre>
 <h3>样例解释</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/305-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/305-1.webp"/></p>
 <h3>解题思路</h3>
 <blockquote>
 <p>树形 DP</p>
