--- a/tifa-233.com/Namomo Spring Camp 2022 Div1 每日一题记录 (Week 7).html
+++ b/tifa-233.com/Namomo Spring Camp 2022 Div1 每日一题记录 (Week 7).html
@@ -61,7 +61,7 @@ date: 2022-04-09 16:00:56</li>
 </code></pre>
 <h3>解释</h3>
 <p>对于第一个输入这是一种合法的染色方案:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/701-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/701-1.webp"/></p>
 <p>对于第二个输入不可能找到一种合适的解决方案</p>
 <h3>代码参考</h3>
 <p>&lt;details open&gt;
