--- a/tifa-233.com/Namomo Spring Camp 2022 Div1 每日一题记录 (Week 9).html
+++ b/tifa-233.com/Namomo Spring Camp 2022 Div1 每日一题记录 (Week 9).html
@@ -237,7 +237,7 @@ date: 2022-04-23 16:00:56</li>
 <pre><code class="language-output1">13
 </code></pre>
 <h3>样例解释</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/906-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/906-1.webp"/></p>
 <p>按照上图的划分方式可以得到最多的块数 , 13 块</p>
 <h3>解题思路</h3>
 <h3>复杂度</h3>
