--- a/tifa-233.com/【洛谷日报#35】线段树的扩展之浅谈zkw线段树.html
+++ b/tifa-233.com/【洛谷日报#35】线段树的扩展之浅谈zkw线段树.html
@@ -31,9 +31,9 @@ date: 2018-08-06 19:22:55</li>
 <p>众所周知, 普通线段树的常数很大, 经常被卡, 而 zkw 线段树的常数很小</p>
 <p>这里用 <a href="https://www.luogu.com.cn/problem/P3372">洛谷 P3372</a> 做一个演示(更详细的补充见文末)</p>
 <p><strong>普通线段树</strong> <a href="https://www.luogu.com.cn/record/9389075">R9389075</a></p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg0_4.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg0_4.webp"/></p>
 <p><strong>zkw 线段树</strong> <a href="https://www.luogu.com.cn/record/9388963">R9388963</a></p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg0_5.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg0_5.webp"/></p>
 <p>前者运行时间是后者运行时间的<strong>2.05</strong>倍！Σ(°Д°; <strong>详细测试见后文</strong></p>
 <p>其实 zkw 线段树不仅快, 而且码量小, 空间小, 好调试~~吊打普通线段树~~orz</p>
 <p>而普通线段树的优点则是方便理解与学习, 并且适用范围更广(zkw 线段树<strong>不能处理有运算优先级的问题</strong>, 如<a href="https://www.luogu.com.cn/problem/P3373">洛谷 P3373</a>)</p>
@@ -47,7 +47,7 @@ date: 2018-08-06 19:22:55</li>
 <p>首先是定义变量:</p>
 <p>{% include_code lang:cpp from:4 to:6 zkw-segment-tree/seg_zkw_singlem_rangeq.cpp %}</p>
 <p>我们以下图为例</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg1_6.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg1_6.webp"/></p>
 <p>(由 <a href="https://visualgo.net/zh/segmenttree">visualgo</a> 生成. 为便于讲解, 笔者做了一些改动)</p>
 <p>下面的黄圈是原数据, 黄圈下面的红色数字是原数组的下标</p>
 <p>上面的树就是线段树了, 每一个结点内部都是结点下方标明的区间中所有元素的总和, 上边的黑色数字就是线段树的下标</p>
@@ -74,15 +74,15 @@ date: 2018-08-06 19:22:55</li>
 <p>单点查询更简单, 相信各位读者都能想到 QwQ</p>
 <h5>单点修改下的区间查询</h5>
 <p>我们以查询<code>[2,6]</code>为例(线段树上的, 下同)</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg1_7.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg1_7.webp"/></p>
 <p>ans=&lt;font color=#b5e61d&gt;[2,2]+[3,3]+[4,4]+[5,5]+[6,6]&lt;/font&gt;</p>
 <p>观察上图可以发现, 因为在线段树上我们可以直接找到&lt;font color=#00a2e8&gt;[2,3]&lt;/font&gt;和&lt;font color=#00a2e8&gt;[4,5]&lt;/font&gt;, 所以我们只需要用&lt;font color=#00a2e8&gt;[2,3]&lt;/font&gt;代替&lt;font color=#b5e61d&gt;[2,2]&lt;/font&gt;和&lt;font color=#b5e61d&gt;[3,3]&lt;/font&gt;; 用&lt;font color=#00a2e8&gt;[4,5]&lt;/font&gt;代替&lt;font color=#b5e61d&gt;[4,4]&lt;/font&gt;和&lt;font color=#b5e61d&gt;[5,5]&lt;/font&gt;</p>
 <p>于是 ans=&lt;font color=#00a2e8&gt;[2,3]&lt;/font&gt;+&lt;font color=#00a2e8&gt;[4,5]&lt;/font&gt;+&lt;font color=#b5e61d&gt;[6,6]&lt;/font&gt;</p>
 <p>自顶向下求和很简单, 怎么实现自底向上的求和呢?</p>
 <p>我们分别在区间左端点-1 和右端点+1 的位置放两个指针(令其为<code>s,t</code>), 就像这样:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg1_8.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg1_8.webp"/></p>
 <p>接着不断将<code>s,t</code>移动到对应结点的父结点处, 直到<code>s,t</code>指向的结点的父结点相同时停止</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg1_9.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg1_9.webp"/></p>
 <p>在这期间, 如果:</p>
 <ol>
 <li><p><code>s</code>指向的结点是左儿子, 那么<code>ans += 右儿子的值</code></p>
@@ -121,16 +121,16 @@ date: 2018-08-06 19:22:55</li>
 <p>我们需要在自底向上时更新结点的值, 所以我们还需要一个变量记录该结点<strong>包含元素的个数</strong></p>
 <p>另外要注意<strong>修改某个结点的标记时要更新上面的值</strong></p>
 <p>举个例子; 我们换一棵树</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg2_2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg2_2.webp"/></p>
 <p>以修改<code>[2,10]</code>为例</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg2_3.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg2_3.webp"/></p>
 <p>当<code>s</code>到了<code>[2,2]</code>结点时, <code>[3,3]</code>结点的 add 加<code>k</code>, 那么接下来<code>[2,3]</code>、<code>[0,3]</code>结点的值都要加上<code>k*1</code>, 而到了<code>[0,7]</code>结点时, 因为<code>[4,7]</code>结点的 add 加了<code>k</code>, 所以<code>[0,7]</code>结点的值要加上<code>k*(1+4)=k*5</code>, 自然<code>k</code>要乘的系数又需要一个变量来记录</p>
 <p>需要注意的是, 这次的<strong>修改要上推到根结点</strong></p>
 <p>下面是代码</p>
 <p>{% include_code lang:cpp from:19 to:37 zkw-segment-tree/seg_zkw_rangem_rangeq1.cpp %}</p>
 <h5>区间查询</h5>
 <p>我们以查询<code>[2,10]</code>为例~~没错笔者我就是要用一张图~~</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg2_3.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/seg2_3.webp"/></p>
 <p>过程类似, 要注意<code>s,t</code>每次上推时都要根据当前所在结点的标记和<code>lNum / rNum</code>更新<code>ans</code> (<code>ans += add[s]*lNum</code>)</p>
 <p>可能有些难懂, 多读两遍或者看看代码或者自己手推一下就好了 QwQ</p>
 <p>同样, 这个也需要上推到根结点</p>
