--- a/tifa-233.com/【洛谷日报#46】浅谈自适应Simpson法.html
+++ b/tifa-233.com/【洛谷日报#46】浅谈自适应Simpson法.html
@@ -22,16 +22,16 @@ date: 2018-08-12 15:33:58</li>
 <p>Simpson 法是一种经典的数值积分方法, 一个重要应用就是求不规则图形面积
 说到不规则图形, 我们往往都是先从曲边梯形开始</p>
 <p>曲边梯形 $ABCD$ 就是下图中曲线 $AB$ 、线段 $AC$ 、 $CD$ 、 $DB$ 围成的图形, 我们想要求出它的面积</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1-1.webp"/></p>
 <p>一个简单而直接的解决方案是: 把曲边梯形分成 $n$ 段, 每一段用一些规则的几何图形去近似, 然后累加每一段的面积, 这样我们就得出结果了</p>
 <p>可以看出, 上述过程的关键就是选择什么样的几何图形去近似</p>
 <p>当然, 用不同的几何图形近似, 效果是不同的</p>
 <h3>用矩形去近似</h3>
 <p>大致这样</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1-2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1-2.webp"/></p>
 <p>我们可以看出这种近似方法太粗糙了, 针对用矩形近似的方案, 我们可以做一些优化:</p>
 <p>对于每一段, 我们取端点中点在函数上的对应点, 借助这个点来构造矩形:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1-3.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1-3.webp"/></p>
 <p>这样看起来就舒服多了, 但感觉还是有些粗糙, 有没有更好的方法呢?</p>
 <p>当然有了!</p>
 <p>不过在继续之前, 我们先来看看如何实现这种方法</p>
@@ -50,7 +50,7 @@ $$</p>
 $$</p>
 <h3>用梯形去近似</h3>
 <p>大致这样</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1-4.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1-4.webp"/></p>
 <p>~~易知此法和上述的结果是一样的, 不过此法视觉效果好~~</p>
 <p>有一些部分看起来已经足够精确了, 但感觉还是有些粗糙, 有没有更好的方法呢?</p>
 <p>当然有了!</p>
@@ -71,7 +71,7 @@ $$</p>
 <h3>Simpson 法</h3>
 <p>进入正题</p>
 <p>Simpson 法是先将原曲线近似成一段段抛物线, 然后再用 Newton-Leibniz 公式求每一段的面积</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1-5.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1-5.webp"/></p>
 <p>(因为笔者在 GeoGebra 里没找到根据三点画抛物线的工具, 所以这里用圆弧代替了 QwQ)</p>
 <p>可以看出, 此法效果相当不错</p>
 <p>我们来看看如何实现</p>
