--- a/tifa-233.com/【洛谷日报#53】浅谈一些求近似值的方法.html
+++ b/tifa-233.com/【洛谷日报#53】浅谈一些求近似值的方法.html
@@ -46,10 +46,10 @@ $$</p>
 <blockquote>
 <p>为了使每次去掉的区间有一定的规律性, 我们这样来考虑: <strong>每次舍去的区间占舍去前的区间的比例数相同</strong></p>
 <p>下面进一步分析如何按上述两个原则确定合适的试点. 如图 2-1 设第 1 试点、第 2 试点分别为 $x_1$ 和 $x_2$, $x_2&lt;x_1$ 且 $x_1,x_2$ 关于 $[a,b]$ 的中心对称, 即 $x_2-a=b-x_1$</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/2_1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/2_1.webp"/></p>
 <p>(图 2-1, 由 GeoGebra 生成)</p>
 <p>显然, 不论点 $x_2$(或点 $x_1$)是好点还是差点, 由对称性, 舍去的区间长度都等于 $b-x_1$, 不妨设 $x_2$ 是好点, $x_1$ 是差点, 于是舍去 $(x_1,b]$. 再在存优范围 $[a,x_1]$ 内安排第 3 次试验, 设试点为 $x_3$, $x_3$ 与 $x_2$ 关于 $[a,x_1]$ 的中心对称 (如图 2-2 所示)</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/2_2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/2_2.webp"/></p>
 <p>(图 2-2, 由 GeoGebra 生成)</p>
 <p>点 $x_3$ 应在点 $x_2$ 左侧, 因为如果点 $x_3$ 在点 $x_2$ 的右侧, 那么当 $x_3$ 是好点, $x_2$ 是差点时, 要舍去区间 $[a,x_2]$, 而它的长度与上次舍去的区间 $(x_1,b]$ 的长度相同, 违背成比例舍去的原则. 于是, 不论点 $x_3$ (或点 $x_2$) 是好点还是差点, 被舍去的区间长度都等于 $x_1-x_2$, 按成比例舍去的原则, 我们有等式</p>
 <p>$$
@@ -143,7 +143,7 @@ $$</p>
 $$</p>
 <p>另外注意应用 Maclaurin 级数并且 $x$ 在某个范围之外时, 得到的结果可能是发散的(这个不展开讲, 有兴趣的读者可以去学习无穷级数相关知识)</p>
 <p>附上 <a href="https://en.wikipedia.org/wiki/Taylor%27s_theorem">Wikipedia</a> 的动图</p>
-<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/3/31/Tayloranimation.gif"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/Tayloranimation.webp"/></p>
 <p>对证明感兴趣的读者可以自行查阅相关资料</p>
 <p>下面给出几个常见的 Taylor 级数</p>
 <p>$$
@@ -182,7 +182,7 @@ x_{n+1}=x_n-\frac{f(x_n)}{f^\prime(x_n)}
 $$</p>
 <p>其中 $x_n$ 代表第 $n$ 次迭代</p>
 <p>附上 <a href="https://en.wikipedia.org/wiki/Newton%27s_method">Wikipedia</a> 的动图</p>
-<p><img alt="" src="https://upload.wikimedia.org/wikipedia/commons/e/e0/NewtonIteration_Ani.gif"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/NewtonIteration_Ani.webp"/></p>
 <p>二次收敛证明: (Wikipedia 上的, 笔者翻译 QwQ)</p>
 <blockquote>
 <p>根据 <a href="https://en.wikipedia.org/wiki/Taylor%27s_theorem">Taylor's theorem</a>, 任何二阶导数连续的函数 $f(x)$ (设 $\alpha$ 是根) 都可以写成</p>
