--- a/tifa-233.com/关于本博客 & FAQ.html
+++ b/tifa-233.com/关于本博客 & FAQ.html
@@ -5,7 +5,7 @@
 comments: false
 sticky: 2147483647
 date: 2020-05-04 19:07:23</h2>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/images/TifaBlog_ba-style@nulla.top.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/images/TifaBlog_ba-style@nulla.top.webp"/></p>
 <p>一个数学系 ACMer 的小站, 主要记录与数学和算法竞赛相关的内容</p>
 <p>&lt;div style="text-align: center;"&gt;&lt;div&gt;{% button /archives/about/#目录汇总 ,目录汇总, th fa-fw %}{% button /frilinks ,友链, th fa-users %}&lt;/div&gt;&lt;/div&gt;</p>
 <p>&lt;!-- more --&gt;</p>
