--- a/tifa-233.com/比赛记录 - Codeforces Round #796 (Div. 2).html
+++ b/tifa-233.com/比赛记录 - Codeforces Round #796 (Div. 2).html
@@ -302,7 +302,7 @@ z
 </code></pre>
 <h3>Note</h3>
 <p>Here is the graph of the example, satisfying $l_i=i$</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/E-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/E-1.webp"/></p>
 <h3>代码参考</h3>
 <p>&lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;</p>
