--- a/tifa-233.com/比赛记录 - Codeforces Round #831 (Div. 1 + Div. 2).html
+++ b/tifa-233.com/比赛记录 - Codeforces Round #831 (Div. 1 + Div. 2).html
@@ -89,13 +89,13 @@ tags:</li>
 </code></pre>
 <h3>Note</h3>
 <p>In the first test case, a way of getting the minimum possible perimeter is to arrange the slices of cheese as follows.</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B-1.webp"/></p>
 <p>We can calculate that the perimeter of the constructed shape is $2+5+1+1+1+1+3+1+5+1+2+3=26$. It can be shown that we cannot get a smaller perimeter.</p>
 <p>Consider the following <strong>invalid</strong> arrangement.</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B-2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B-2.webp"/></p>
 <p>Even though the perimeter of the shape above is $24$, it does not satisfy all conditions of the problem. The bottom edge of the $1 \times 1$ slice of cheese is not a segment of the x-axis.</p>
 <p>In the second test case, a way of getting the minimum possible perimeter is to arrange the slices of cheese as follows.</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B-3.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B-3.webp"/></p>
 <p>We can calculate that the perimeter of the constructed shape is $2+2+2+3+2+3+2+2+2+4=24$. It can be shown that we cannot get a smaller perimeter.</p>
 <h3>代码参考</h3>
 <p>&lt;details open&gt;
@@ -242,9 +242,9 @@ YA
 </code></pre>
 <h3>Note</h3>
 <p>The following is the structure of the cards in the first example.</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/E-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/E-1.webp"/></p>
 <p>Pak Chanek can choose the permutation $a = [1, 5, 4, 3, 2, 6]$.</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/E-2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/E-2.webp"/></p>
 <p>Let $w_i$ be the number written on card $i$. Initially, $w_i = a_i$. Pak Chanek can do the following operations in order:</p>
 <ol>
 <li>Select card $5$. Append $w_5 = 2$ to the end of $s$. As $w_4 &gt; w_5$, the value of $w_4$ becomes $2$. Remove card $5$. After this operation, $s = [2]$.</li>
@@ -312,7 +312,7 @@ YA
 <li><strong>Strength</strong> $s_{i,j}$, which is an integer between $1$ and $10^9$ inclusive.</li>
 </ul>
 <p>Each portal has $4$ faces labelled with integers $0,1,2,3$, which correspond to the north, east, south, and west direction respectively.</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/G-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/G-1.webp"/></p>
 <p>When a laser enters face $k$ of portal $(i, j)$ with speed $x_\text{in}$, it leaves the portal going out of face $(k+2+t_{i,j}) \bmod 4$ with speed $x_\text{out} = \max(x_\text{in},s_{i,j})$. The portal also has to consume $x_\text{out} - x_\text{in}$ units of <strong>energy</strong>.</p>
 <p>Pak Chanek is very bored today. He will shoot $4nm$ lasers with an initial speed of $1$, one into each face of each portal. Each laser will travel throughout this grid of portals until it moves outside the grid or it has passed through $10^{100}$ portals.</p>
 <p>At the end, Pak Chanek thinks that a portal is <strong>good</strong> if and only if the total energy consumed by that portal modulo $2$ is equal to its type. Given the strength settings of all portals, find a way to assign the type settings of each portal such that the number of good portals is maximised.</p>
@@ -407,7 +407,7 @@ YA
 </code></pre>
 <h3>Note</h3>
 <p>In the first example, the tree after the $6$-th query will look like this.</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/H-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/H-1.webp"/></p>
 <ul>
 <li>Vertex $7$ is a leaf, so its value is $0$.</li>
 <li>Vertex $6$ is a leaf, so its value is $0$.</li>
