--- a/tifa-233.com/论文阅读笔记 - Multiscale structural complexity of natural patterns.html
+++ b/tifa-233.com/论文阅读笔记 - Multiscale structural complexity of natural patterns.html
@@ -72,9 +72,9 @@ $$</p>
 <li>$N$ 为迭代次数</li>
 <li>$L$ 为原始图像边长</li>
 </ul>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/fig1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/fig1.webp"/></p>
 <p><strong>图 1</strong>: I 为原始图像, II 为将图像分成 $\Lambda\times\Lambda$ 的小块, III 为对图像进行重整化, 并放大为 $L\times L$ 的图像 (本例中 $l:=\frac{L}{\Lambda}=4,\Lambda=2$). A 和 B 分别为重整化前和重整化后各小块的图像情况, O 为 A 和 B 对应像素的差. 当取 $N=10,\Lambda=2$ 时, $C=0.163859$</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/fig2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/fig2.webp"/></p>
 <p><strong>图 2</strong>: 自然图像 (A-C) 和人工图像 (D-F) 的结构复杂度比对. 图像大小均为 $4096\times 4096$. 在 $N=10,\Lambda=2$ 的情况下, 结构复杂度结果如下表:</p>
 <p>| 图像 |    $C$     | 图像 |    $C$     |
 | :--: | :--------: | :--: | :--------: |
@@ -90,9 +90,9 @@ H=-J\sum_{nn'}S_n^zS_{n'}^z,~J&gt;0\tag{5}
 $$</p>
 <p>和顺磁-铁磁相变, 以及在边界处复杂度的变化</p>
 <p>对 2D 情况, 我们在大小为 $1024\times 1024$ 的矩形中, 在 $0&lt;\frac{T}{J}&lt;4.5$ 的范围内和步长 $\Delta T=0.045J$ 的条件下进行经典 MC 模拟; 对 3D 情况, 我们在大小为 $256\times 256\times 256$ 的立方体中, 以 $2\times 2\times 2$ 为最小重整块, 在 $2&lt;\frac{T}{J}&lt;6.5$ 的范围内和步长 $\Delta T=0.045J$ 的条件下进行经典 MC 模拟</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/fig3.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/fig3.webp"/></p>
 <p><strong>图 3</strong>: 从 2D Ising 模型模拟得出的复杂度的温度依赖性. 应用 3.1 中提到的方法, 取 $N = 8,\Lambda = 2$. 红色和蓝色方块分别对应 $k\geqslant 0$ 和 $k\geqslant 1$ 的复杂度. 误差线长度小于符号大小. 插图展示了复杂度对温度的一阶导数变化情况</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/fig4.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/fig4.webp"/></p>
 <p><strong>图 4</strong>: 从 3D Ising 模型仿真模拟得出的复杂度的温度依赖性. 应用 3.1 中提到的方法, 取 $L = 256, N =6,\Lambda=2$. 红色和蓝色方块分别对应 $k\geqslant 0$ 和 $k\geqslant 1$ 的复杂度. 误差线长度小于符号大小. 插图展示了复杂度对温度的一阶导数变化情况. $\frac{T}{J}\approx 3.2$ 附近的蓝色曲线上的极值点反映了铁磁相内磁畴的出现, 这在 MC 模拟大晶格的时候可能会出现</p>
 <p>观察图像发现, 我们可以以 ${\mathrm{d}C\over\mathrm{d}T}$ 作为判断相变边界的指标. 下表是基于复杂度得到的相变边界和理论结果的对比</p>
 <p>|     | 基于复杂度得到的结果 ($\frac{T}{J}$) | 理论结果 ($\frac{T}{J}$) |
