--- a/tifa-233.com/题解 - 2020 ICPC 江西省大学生程序设计竞赛.html
+++ b/tifa-233.com/题解 - 2020 ICPC 江西省大学生程序设计竞赛.html
@@ -222,7 +222,7 @@ $$</p>
 <h3>题意简述</h3>
 <p>有个 $n\times m$ 的矩形网格纸, <code>Alice</code>和<code>Bob</code>轮流行动, <code>Alice</code>先手, 每个人均要选一张纸片并, 沿某条网格线将其剪成两片, 率先剪出 $1\times 1$ 纸片的玩家判<strong>负</strong>, 两人均采取最优行动, 问谁胜</p>
 <h3>解题思路</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/J-1.jpg"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/J-1.webp"/></p>
 <p>原型是一道经典的博弈论题</p>
 <p>我们可以把每张纸片均看作一个有向图游戏, 整张纸看作有向图游戏的和</p>
 <p>令 $\operatorname{SG}(m,n)$ 表示 $m\times n$ 纸片对应的 $\operatorname{SG}$ 函数值</p>
