--- a/tifa-233.com/题解 - 2022 ICPC 亚洲区域赛(沈阳) 热身赛.html
+++ b/tifa-233.com/题解 - 2022 ICPC 亚洲区域赛(沈阳) 热身赛.html
@@ -29,7 +29,7 @@ date: 2022-11-05 18:24:04</li>
 <p>{% pdf /archives/icpc-asyr2022-p/problems.pdf 600px %}</p>
 <h2>A - The introduction of NEU</h2>
 <h3>解题思路</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A.jpg"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A.webp"/></p>
 <blockquote>
 <p>From <a href="https://www.neu.edu.cn/constitution/">东北大学章程网</a>, <a href="https://web.archive.org/web/20220814200414/https://www.neu.edu.cn/constitution/">Archived</a></p>
 </blockquote>
