--- a/tifa-233.com/题解 - Codeforces Round #645 Div. 2 (A-D).html
+++ b/tifa-233.com/题解 - Codeforces Round #645 Div. 2 (A-D).html
@@ -24,7 +24,7 @@ date: 2020-05-27 15:12:06</li>
 <h3>题意</h3>
 <p>给定 $n\times m$ 矩形, 每一条长度为 1 的边均是一条街道(例如 $2\times2$ 的矩形有 12 条街道)</p>
 <p>每条街道的中点均可放置一盏路灯, 路灯可照亮与之相邻的两个方格(若在边缘则为一个)</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A-1.bmp"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A-1.webp"/></p>
 <p>问至少需要几盏路灯可照亮全部方格</p>
 <h3>思路与做法</h3>
 <p>稍微想想就能发现, 答案即为 $\displaystyle\left\lceil\frac{mn}{2}\right\rceil$</p>
@@ -54,7 +54,7 @@ date: 2020-05-27 15:12:06</li>
 <h2>C - Celex Update</h2>
 <h3>题意</h3>
 <p>给定如下形式的矩阵</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-1.bmp"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-1.webp"/></p>
 <p>规定</p>
 <ul>
 <li><p>坐标 $(x,y)$ 对应的格子: 从数字为 $1$ 的格子出发, 向右 $x-1$ 个格, 再向下 $y-1$ 个格所到达的格子</p>
@@ -71,7 +71,7 @@ date: 2020-05-27 15:12:06</li>
 <p>所以, 只要将路径中出现的"右 $\to$ 下"改成"下 $\to$ 右"就能使路径值+1</p>
 <p>显然, 我们可以通过有限步上述操作将"右 $\to...\to$ 右 $\to$ 下 $\to...\to$ 下"变为"下 $\to...\to$ 下 $\to$ 右 $\to...\to$ 右", 同时该过程中路径的值严格单调增加</p>
 <p>例如</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-2.bmp"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-2.webp"/></p>
 <p>显然上述前者为最短路径, 后者为最长路径</p>
 <p>而显然任意位于两者之间的值都有路径与之对应</p>
 <p>故答案即为<strong>最长路径-最短路径+1</strong></p>
