--- a/tifa-233.com/题解 - Codeforces Round #791 Div. 2 (A-D).html
+++ b/tifa-233.com/题解 - Codeforces Round #791 Div. 2 (A-D).html
@@ -159,15 +159,15 @@ Yes
 </code></pre>
 <h3>Note</h3>
 <p>Consider example. After the first two queries the board will look like the following picture (the letter $R$ denotes cells in which rooks are located, the subrectangle of the query of the third type is highlighted in green):</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-1.webp"/></p>
 <p>Chessboard after performing the third and the fourth queries:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-2.webp"/></p>
 <p>Chessboard after performing the fifth and the sixth queries:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-3.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-3.webp"/></p>
 <p>Chessboard after performing the seventh and the eighth queries:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-4.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-4.webp"/></p>
 <p>Chessboard after performing the last two queries:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-5.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-5.webp"/></p>
 <h3>解题思路</h3>
 <p>显然两个树状数组维护一下哪些点有 Rooks 就行</p>
 <h3>代码参考</h3>
@@ -232,7 +232,7 @@ Yes
 </code></pre>
 <h3>Note</h3>
 <p>Graph described in the first and the second examples is illustrated below</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/D-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/D-1.webp"/></p>
 <p>In the first example Masha can initially put a coin at vertex $1$. After that she can perform three operations: $1 \to 3$, $3 \to 4$ and $4 \to 5$. Integers $1, 2, 3$ and $4$ will be written in the notepad</p>
 <p>In the second example Masha can initially put a coin at vertex $2$. After that she can perform $99$ operations: $2 \to 5$, $5 \to 6$, $6 \to 2$, $2 \to 5$, and so on. Integers $10, 4, 5, 10, 4, 5, \ldots, 10, 4, 5, 10$ will be written in the notepad</p>
 <p>In the third example Masha won't be able to perform $4$ operations</p>
