--- a/tifa-233.com/题解 - Codeforces Round #829 (Div. 2).html
+++ b/tifa-233.com/题解 - Codeforces Round #829 (Div. 2).html
@@ -356,13 +356,13 @@ $$</li>
 <p>If there are no two adjacent free cells, then in order to free some place for a sunbed, you will have to disturb other tourists. You can do the following actions:</p>
 <ul>
 <li><p>Come to some sunbed and, after causing $p$ units of discomfort to its owner, lift the sunbed by one of its sides and rotate it by $90$ degrees. One half of the sunbed must remain in the same cell and another half of the sunbed must move to the free cell. At the same time, anything could be on the way of a sunbed during the rotation.</p>
-<p>| <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1l.png"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-arrow.png"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1r.png"/> |
-| :-----------: | :--------------: | :-----------: |</p>
+<p>| <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1l.webp"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-arrow.webp"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1r.webp"/> |
+| :------------: | :---------------: | :------------: |</p>
 <p>&lt;center&gt;Rotation of the sunbed by 90 degrees around cell (1, 2).&lt;/center&gt;</p>
 </li>
 <li><p>Come to some sunbed and, after causing $q$ units of discomfort to its owner, shift the sunbed along its long side by one cell. One half of the sunbed must move to the place of another, and another — to the free cell.</p>
-<p>| <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-2l.png"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-arrow.png"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-2r.png"/> |
-| :-----------: | :--------------: | :-----------: |</p>
+<p>| <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-2l.webp"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-arrow.webp"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-2r.webp"/> |
+| :------------: | :---------------: | :------------: |</p>
 </li>
 </ul>
 <p>&lt;center&gt;Shift of the sunbed by one cell to the right.&lt;/center&gt;</p>
@@ -416,8 +416,8 @@ DD.
 </code></pre>
 <h3>Note</h3>
 <p>In the first example we can shift upper sunbed to the left and lower sunbed — to the right. Andrew will be able to put his sunbed vertically in the middle of the beach. We well cause $2 + 2 = 4$ units of discomfort. It is easy to prove that it is an optimal answer.</p>
-<p>| <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-notel.png"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-arrow.png"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-noter.png"/> |
-| :--------------: | :--------------: | :--------------: |</p>
+<p>| <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-notel.webp"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-arrow.webp"/> | <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-noter.webp"/> |
+| :---------------: | :---------------: | :---------------: |</p>
 <p>&lt;center&gt;Optimal strategy in the first example (Andrew's sunbed is colored white).&lt;/center&gt;</p>
 <p>In the second example it is impossible to free a space for Andrew's sunbed. All possible states of the beach after any rotates and shifts are illustrated in the problem statement.</p>
 <h3>思路与做法</h3>
