--- a/tifa-233.com/题解 - ICPC North Central NA Regional Contest 2019.html
+++ b/tifa-233.com/题解 - ICPC North Central NA Regional Contest 2019.html
@@ -91,7 +91,7 @@ date: 2021-03-07 18:11:53</li>
 <p>{% pdf /archives/icpc-ncna2019/solutions-lzu.pdf 600px %}</p>
 <h2>A - Weird Flecks, But OK</h2>
 <p>&lt;div style="width:25.00%" class="illustration"&gt;
-  &lt;img src="A-1.png" alt=""&gt;
+  &lt;img src="A-1.webp" alt=""&gt;
 &lt;/div&gt;</p>
 <p>An artist who wanted to create an installation where his works appeared to be floating in midair has cast a large cube of clear acrylic to serve as a base. Unfortunately, during the casting, some small flecks of dirt got into the mix, and now appear as a cluster of pinpoint flaws in the otherwise clear cube</p>
 <p>He wants to drill out the portion of the cube containing the flaws so that he can plug the removed volume with new, clear acrylic. He would prefer to do this in one drilling step. For stability's sake, the drill must enter the cube only once, perpendicular to one of its faces. The cube's faces are parallel to the coordinate axes</p>
@@ -143,7 +143,7 @@ date: 2021-03-07 18:11:53</li>
 <p>对 $x,y,z$ 方向分别求一遍, 再取最小值即可</p>
 <h2>B - Code Names</h2>
 <p>&lt;div style="width:30.00%" class="illustration"&gt;
-  &lt;img src="B-1.png" alt=""&gt;
+  &lt;img src="B-1.webp" alt=""&gt;
 &lt;/div&gt;</p>
 <p>You are given $W$, a set of $N$ words that are anagrams of each other. There are no duplicate letters in any word. A set of words $S⊆W$ is called "swap-free" if there is no way to turn a word $x∈S$ into another word $y∈S$ by swapping only a single pair of (not necessarily adjacent) letters in $x$. Find the size of the largest swap-free set $S$ chosen from the given set $W$</p>
 <h3>Input</h3>
@@ -206,7 +206,7 @@ teas
 <h3>复杂度</h3>
 <h2>C - New Maths</h2>
 <p>&lt;div style="width:30.00%" class="illustration"&gt;
-  &lt;img src="C-1.png" alt=""&gt;
+  &lt;img src="C-1.webp" alt=""&gt;
 &lt;/div&gt;</p>
 <p>"Drat!" cursed Charles. "This stupid carry bar is not working in my Engine! I just tried to calculate the square of a number, but it's wrong; all of the carries are lost."</p>
 <p>"Hmm," mused Ada, "arithmetic without carries! I wonder if I can figure out what your original input was, based on the result I see on the Engine."</p>
@@ -359,7 +359,7 @@ $$</p>
 </ul>
 <h2>D - Some Sum</h2>
 <p>&lt;div style="width:50.00%" class="illustration"&gt;
-  &lt;img src="D-1.png" alt=""&gt;
+  &lt;img src="D-1.webp" alt=""&gt;
   &lt;div class="description"&gt;
     illustration by Larry Pyeatt
   &lt;/div&gt;
@@ -395,7 +395,7 @@ $$</p>
 </ul>
 <h2>E - Early Orders</h2>
 <p>&lt;div style="width:30.00%" class="illustration"&gt;
-  &lt;img src="E-1.png" alt=""&gt;
+  &lt;img src="E-1.webp" alt=""&gt;
 &lt;/div&gt;</p>
 <p>You are given a list of integers $x_1,x_2,…,x_n$ and a number $k$. It is guaranteed that each $i$ from $1$ to $k$ appears in the list at least once</p>
 <p>Find the lexicographically smallest subsequence of $x$ that contains each integer from $1$ to $k$ exactly once</p>
@@ -438,7 +438,7 @@ $$</p>
 <p>我们可以用类似单调队列的思想去实现:</p>
 <p>用<code>ans[]</code>存储答案, 当枚举到第 $i$ 个数 $a_i$ 的时候, 当<code>ans[]</code>之中没有 $a_i$ 时, 将其与<code>ans[]</code>的最后一位 $b$ 做比较, 如果 $a_i&lt;b$ 且 $a_i$ 之后还有 $b$, 那么删去 $b$, 接着比较, 直到在<code>ans[]</code>中找到不满足条件的数为止, 此时插入 $a_i$, 枚举下一个数</p>
 <h2>F - Pulling Their Weight</h2>
-<p>&lt;div style="width:30.00%" class="illustration"&gt;&lt;img src="F-1.jpg" alt=""&gt;
+<p>&lt;div style="width:30.00%" class="illustration"&gt;&lt;img src="F-1.webp" alt=""&gt;
   &lt;div class="description"&gt;
     &lt;a href="https://en.wikipedia.org/wiki/File:American_bison_k5680-1.jpg"&gt;Buffalo&lt;/a&gt;, &lt;a href="https://commons.wikimedia.org/wiki/File:Water_Vole_(6038169781).jpg"&gt;
     vole&lt;/a&gt;, and &lt;a href="https://commons.wikimedia.org/wiki/File:Miniature_schnauzer.jpg"&gt;schnauzer&lt;/a&gt;. Original images from Wikipedia.
@@ -493,7 +493,7 @@ $$</p>
 <p>$O(\max{n,A})$</p>
 <h2>G - Birthday Paradox</h2>
 <p>&lt;div style="width:40.00%" class="illustration"&gt;
-  &lt;img src="G-1.png" alt=""&gt;
+  &lt;img src="G-1.webp" alt=""&gt;
   &lt;div class="description"&gt;
     The probability of &lt;span class="katex"&gt;&lt;span class="mord mathdefault"&gt;n&lt;/span&gt;&lt;/span&gt;
     unique birthdays among &lt;span class="katex"&gt;&lt;span class="mord mathdefault"&gt;n&lt;/span&gt;&lt;/span&gt; people.
@@ -560,7 +560,7 @@ $$</p>
 <p>$O(k)$</p>
 <h2>H - On Average They're Purple</h2>
 <p>&lt;div style="width:30.00%" class="illustration"&gt;
-  &lt;img src="H-1.png" alt=""&gt;
+  &lt;img src="H-1.webp" alt=""&gt;
 &lt;/div&gt;</p>
 <p>Alice and Bob are playing a game on a simple connected graph with $N$ nodes and $M$ edges</p>
 <p>Alice colors each edge in the graph red or blue</p>
@@ -604,7 +604,7 @@ and $M$ with $2≤N≤100000$ and $1≤M≤100000$. The next $M$ lines contain t
 <p>直接用 BFS 求最短路就行, 下面给出的是用 Dijkstra 求的</p>
 <h2>I - Full Depth Morning Show</h2>
 <p>&lt;div style="width:30.00%" class="illustration"&gt;
-  &lt;img src="I-1.png" alt=""&gt;
+  &lt;img src="I-1.webp" alt=""&gt;
 &lt;/div&gt;</p>
 <p>All boring tree-shaped lands are alike, while all exciting tree-shaped lands are exciting in their own special ways. What makes Treeland more exciting than the other tree-shaped lands are the raddest radio hosts in the local area: Root and Leaf. Every morning on FM $32.33$(repeating of course), Root and Leaf of The Full Depth Morning Show serve up the hottest celebrity gossip and traffic updates</p>
 <p>The region of Treeland is made of $n$ cities, connected by $n-1$ roads such that between every pair of cities there is exactly one simple path. The $i$th road connects cities $u_i$ and $v_i$, and has a toll of $w_i$</p>
@@ -612,7 +612,7 @@ and $M$ with $2≤N≤100000$ and $1≤M≤100000$. The next $M$ lines contain t
 <p>Each city in Treeland has its own tax on prizes: $t_i$. Let $d_{u,v}$ be the sum of the tolls on each road on the only simple path from city $u$ to $v$. For a trip from city $u$ to city $v$, the cost of that trip is then $(t_u+t_v)d_{u,v}$</p>
 <p>&lt;div class="figure"&gt;
   &lt;center&gt;
-    &lt;img src="I-2.png" alt="" style="width:70.00%"&gt;
+    &lt;img src="I-2.webp" alt="" style="width:70.00%"&gt;
     &lt;div class="caption"&gt;
       &lt;b&gt;Figure 1&lt;/b&gt;: The map of Treeland corresponding to the
       first sample input.
@@ -679,7 +679,7 @@ b_{u'}=b_u+\left(\sum_{v}t_v-2\sum_{v\in S(u')}t_v\right)d_{u,u'}
 $$</p>
 <h2>J - This Ain't Your Grandpa's Checkerboard</h2>
 <p>&lt;div style="width:20.00%" class="illustration"&gt;
-  &lt;img src="J-1.png" alt=""&gt;
+  &lt;img src="J-1.webp" alt=""&gt;
 &lt;/div&gt;</p>
 <p>You are given an $n$-by-$n$ grid where each square is colored either black or white. A grid is correct if all of the following conditions are satisfied:</p>
 <ul>
@@ -749,7 +749,7 @@ WBWWBB
 <p>直接模拟即可</p>
 <h2>K - Solar Energy</h2>
 <p>&lt;div style="width:30.00%" class="illustration"&gt;
-  &lt;img src="K-1.png" alt=""&gt;
+  &lt;img src="K-1.webp" alt=""&gt;
 &lt;/div&gt;</p>
 <p>You are planning to travel in interstellar space in the hope of finding habitable planets. You have already identified $N$ stars that can recharge your spaceship via its solar panels. The only work left is to decide the orientation of the spaceship that maximizes the distance it can travel</p>
 <p>Space is modeled as a $2$D plane, with the Earth at the origin. The spaceship can be launched from the Earth in a straight line, in any direction. Star $i$ can provide enough energy to travel $T_i$ distance if the spaceship is launched at an angle of $a_i$ with the $x$-axis. If the angle is not perfectly aligned, then the spaceship gets less energy. Specifically, if the launch direction makes an angle of a with the $x$-axis, then it gets enough energy to travel distance of</p>
@@ -814,13 +814,13 @@ f_3(a)&amp;=\max{0,10-4|a-1.5|,10-4|2\pi-|a-1.5||}\
 \end{aligned}
 $$</p>
 <p>画个图</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/K-sol-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/K-sol-1.webp"/></p>
 <p>其中&lt;font color="#2d70b2"&gt;蓝色&lt;/font&gt;图像为 $f_1$, &lt;font color="#c74440"&gt;红色&lt;/font&gt;图像为 $f_2$, &lt;font color="#388c46"&gt;绿色&lt;/font&gt;图像为 $f_3$</p>
 <p>我们把 $f$ 也加进去</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/K-sol-2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/K-sol-2.webp"/></p>
 <p>其中&lt;font color="#6042a6"&gt;紫色&lt;/font&gt;图像为 $f\over3$</p>
 <p>放大一些</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/K-sol-3.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/K-sol-3.webp"/></p>
 <p>可以证明 $f$ 的图像存在"局部周期", 即</p>
 <p>$$
 \big(\exists a,t\in\mathbb{R},\forall x\in[a,a+t)\big),~f(x)=f(x+t)
