--- a/tifa-233.com/题解 - ICPC 西北区域省赛 2020.html
+++ b/tifa-233.com/题解 - ICPC 西北区域省赛 2020.html
@@ -34,7 +34,7 @@ date: 2020-11-01 00:57:43</li>
 <p>众所周知, 陕西不在西北地区, 云南广西都在西北地区</p>
 <p>比赛体验极差, 开始两分钟才发密码, 比赛还一堆锅, 包括但不限于不给数据范围, 样例错误, SPJ 出锅, 数据弱, 出原题</p>
 <p>MD 绝了</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <h2>题目概览</h2>
 <p>| 题号<a href="%E6%89%93*%E7%9A%84%E6%98%AF%E8%BF%98%E6%B2%A1%E5%86%99%E7%9A%84%E9%A2%98">^1</a> | 标题<a href="%E5%B8%A6%E8%B6%85%E9%93%BE%E6%8E%A5%E7%9A%84%E6%98%AF%E6%89%BE%E5%88%B0%E4%BA%86%E5%8E%9F%E9%A2%98%E6%88%96%E5%8E%9F%E5%9E%8B">^2</a>                                                      | 时空限制          | AC / Total | 做法         |
 | -------- | ------------------------------------------------------------- | ----------------- | ---------- | ------------ |
@@ -212,7 +212,7 @@ $$</p>
 </code></pre>
 <p>&lt;/details&gt;</p>
 <p>画出来是这样的:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/s-C-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/s-C-1.webp"/></p>
 <p>我们发现 $1$ 和 $9$ 的度是 $7$, $7$ 和 $8$ 的度是 $2$, 其余点的度是 $6$</p>
 <p>按这样的做法就会输出</p>
 <pre><code class="language-output1">1 x 9
