--- a/tifa-233.com/题解 - Japanese Student Championship 2021.html
+++ b/tifa-233.com/题解 - Japanese Student Championship 2021.html
@@ -389,7 +389,7 @@ acaabcbababaaac
 85
 </code></pre>
 <p>If we write $\max(a_i,b_j)$ at the $i$-th row and $j$-th column in a grid, the four queries will change it as follows:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1.webp"/></p>
 <h3>Sample Input 2</h3>
 <pre><code class="language-input2">3 3 5
 1 3 10
@@ -475,7 +475,7 @@ acaabcbababaaac
 </code></pre>
 <p>We need an edge between Vertex $1$ and Vertex $2$, and we must not add an edge between Vertex $1$ and Vertex $4$ or between Vertex $3$ and Vertex $4$</p>
 <p>Thus, we have the following two valid graphs:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/G-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/G-1.webp"/></p>
 <h3>Sample Input 2</h3>
 <pre><code class="language-input2">3
 0 1 1
@@ -586,7 +586,7 @@ trees with $11$ vertices</p>
 <pre><code class="language-output1">10
 </code></pre>
 <p>The figure below shows the cities and canals in this country, where numbers along the lines representing canals represent the tolls:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/H-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/H-1.webp"/></p>
 <p>You can deliver the cargoes as follows to make the total toll $10$ yen:</p>
 <ul>
 <li>The $1$-st cargo: use Canal $1,4$ to deliver it on the route: City $4,1,3$</li>
