--- a/tifa-233.com/题解 - [Atcoder ABC 184] (C - F).html
+++ b/tifa-233.com/题解 - [Atcoder ABC 184] (C - F).html
@@ -27,7 +27,7 @@ date: 2021-02-02 12:05:57</li>
 <h2>C - Super Ryuma</h2>
 <h3>Problem Statement</h3>
 <p>There is an infinite two-dimensional grid, and we have a piece called Super Ryuma at square $(r_1,c_1)$. (Ryu means dragon and Ma means horse.) In one move, the piece can go to one of the squares shown below:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-1.jpg"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-1.webp"/></p>
 <p>More formally, when Super Ryuma is at square $(a,b)$, it can go to square $(c,d)$ such that at least one of the following holds:</p>
 <ul>
 <li>$a+b=c+d$</li>
