--- a/tifa-233.com/题解 - [Codeforces Global Round 10](A - D & F).html
+++ b/tifa-233.com/题解 - [Codeforces Global Round 10](A - D & F).html
@@ -186,21 +186,21 @@ integers $a_1,a_2,...,a_n$ ($0≤ai≤10^9$) - the heights of the supports</p>
 <p>直接输出</p>
 </li>
 <li><p>当 $a$ 是整体是非上升的时候, 如</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-1.webp"/></p>
 <p>直接填平就好</p>
 </li>
 <li><p>其他情况, 如
-<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-2.png"/></p>
+<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-2.webp"/></p>
 <p>我们可以按如下步骤化为上一种情况</p>
 <ol>
 <li>填平<br/>
-<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-3.png"/>
+<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-3.webp"/>
 得
-<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-4.png"/></li>
+<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-4.webp"/></li>
 <li>填平<br/>
-<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-5.png"/>
+<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-5.webp"/>
 得
-<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-6.png"/></li>
+<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-sol-6.webp"/></li>
 </ol>
 </li>
 </ul>
