--- a/tifa-233.com/题解 - [Luogu P1244] [NOI2000] 青蛙过河.html
+++ b/tifa-233.com/题解 - [Luogu P1244] [NOI2000] 青蛙过河.html
@@ -20,7 +20,7 @@ date: 2020-01-15 11:45:50</li>
 <h2>原始题面</h2>
 <h3>题目描述</h3>
 <p>有一条河, 左边一个石墩(A 区)上有编号为 $1, 2, 3, 4, …, n$ 的 $n$ 只青蛙, 河中有 $k$ 个荷叶(C 区), 还有 $h$ 个石墩(D 区), 右边有一个石墩(B 区), 如下图所示.</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.jpg"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <p>$n$ 只青蛙要过河(从左岸石墩 A 到右岸石墩 B), 规则为:</p>
 <p>(1)石墩上可以承受任意多只青蛙, 荷叶只能承受一只青蛙(不论大小);</p>
 <p>(2)青蛙可以: $A\to B$(表示可以从 A 跳到 B, 下同), $A\to C, A\to D, C\to B, D\to B, D\to C, C\to D$;</p>
