--- a/tifa-233.com/题解 - [Luogu P2011] 计算电压.html
+++ b/tifa-233.com/题解 - [Luogu P2011] 计算电压.html
@@ -62,7 +62,7 @@ date: 2021-10-30 00:29:57</li>
 <p>时间限制: 2s, 内存限制: 256M</p>
 <p>【注释】</p>
 <p>样例如图所示</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.jpg"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <h2>解题思路</h2>
 <blockquote>
 <p>首先 % 罗神</p>
