--- a/tifa-233.com/题解 - [Luogu P3878] [TJOI2010] 分金币.html
+++ b/tifa-233.com/题解 - [Luogu P3878] [TJOI2010] 分金币.html
@@ -58,7 +58,7 @@ date: 2021-11-11 23:03:58</li>
 <p>看数据范围就知道要折半或者大力模拟退火</p>
 <blockquote>
 <p>模拟退火交了两页, 最高 10 分, 气得我直接码正解去了</p>
-<p>今天的爆率那叫一个高啊.jpg</p>
+<p>今天的爆率那叫一个高啊.webp</p>
 </blockquote>
 <p>令 <code>s[][]</code> 为存所有选取情况的数组, 其中 <code>s[i]</code> 表示前一组金币个数为 $i$ 时的所有可能结果 (或者前一组金币个数比后一组多 $i$ 时个数)</p>
 <p>先把前 $\lceil\frac{n}{2}\rceil$ 个金币的所有选取情况存起来, 然后对剩下的 $n-\lceil\frac{n}{2}\rceil$ 个金币的所有情况在对应数组里二分即可</p>
