--- a/tifa-233.com/题解 - [Luogu P4205] [NOI2005] 智慧珠游戏.html
+++ b/tifa-233.com/题解 - [Luogu P4205] [NOI2005] 智慧珠游戏.html
@@ -21,34 +21,34 @@ date: 2020-10-25 17:01:58</li>
 <p>1000 ms / 125.00 MB</p>
 <h3>题目描述</h3>
 <p>智慧珠游戏拼盘由一个三角形盘件和 12 个形态各异的零件组成. 拼盘的盘件如图 1 所示:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <p>12 个零件按珠子数分 3 大类:</p>
 <ul>
 <li>第 1 大类, 有三个珠子, 只有一种形状<ul>
-<li>符号为 A, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A.png"/></li>
+<li>符号为 A, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A.webp"/></li>
 </ul>
 </li>
 <li>第 2 大类, 有 4 个珠子, 有 3 种形状<ul>
-<li>符号为 B, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B.png"/></li>
-<li>符号为 C, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C.png"/></li>
-<li>符号为 D, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/D.png"/></li>
+<li>符号为 B, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B.webp"/></li>
+<li>符号为 C, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C.webp"/></li>
+<li>符号为 D, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/D.webp"/></li>
 </ul>
 </li>
 <li>第 3 大类, 有 5 个珠子, 有 8 种形状<ul>
-<li>符号为 E, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/E.png"/></li>
-<li>符号为 F, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F.png"/></li>
-<li>符号为 G, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/G.png"/></li>
-<li>符号为 H, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/H.png"/></li>
-<li>符号为 I, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/I.png"/></li>
-<li>符号为 J, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/J.png"/></li>
-<li>符号为 K, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/K.png"/></li>
-<li>符号为 L, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/L.png"/></li>
+<li>符号为 E, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/E.webp"/></li>
+<li>符号为 F, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F.webp"/></li>
+<li>符号为 G, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/G.webp"/></li>
+<li>符号为 H, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/H.webp"/></li>
+<li>符号为 I, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/I.webp"/></li>
+<li>符号为 J, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/J.webp"/></li>
+<li>符号为 K, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/K.webp"/></li>
+<li>符号为 L, 形状为 <img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/L.webp"/></li>
 </ul>
 </li>
 </ul>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/2.webp"/></p>
 <p>图 2 示出了一种拼盘方案. 为便于描述可将图 2 抽象为图 3, 就可以用一个数据为字符的二维数组来表示了</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/3.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/3.webp"/></p>
 <p>对于由珠子构成的零件, 可以放到盘件的任一位置, 条件是能有地方放, 且尺寸合适, 所有的零件都允许旋转(0º、90º、180º、270º)和翻转(水平、竖直)</p>
 <p>现给出一个盘件的初始布局, 求一种可行的智慧珠摆放方案, 使所有的零件都能放进盘件中</p>
 <h3>输入输出格式</h3>
