--- a/tifa-233.com/题解 - [Luogu P7075] [CSP-S2020] 儒略日.html
+++ b/tifa-233.com/题解 - [Luogu P7075] [CSP-S2020] 儒略日.html
@@ -98,7 +98,7 @@ date: 2021-11-15 00:45:28</li>
 <h2>解题思路</h2>
 <p>直接代公式即可</p>
 <blockquote>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.jpg"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <p>from <em>Astronomical Algorithms</em></p>
 </blockquote>
 <p>需要注意本题不需要对儒略日加 0.5</p>
