--- a/tifa-233.com/题解 - [POJ 2568] [ZOJ 1965] Decode the Tree.html
+++ b/tifa-233.com/题解 - [POJ 2568] [ZOJ 1965] Decode the Tree.html
@@ -42,7 +42,7 @@ N ::= number
 <p>The input contains several test cases. Each test case specifies the Prufer code of a tree on one line. You will find $n-1$ numbers separated by a single space. Input is terminated by EOF. You may assume that $1\leqslant n\leqslant 50$</p>
 <h3>Output</h3>
 <p>For each test case generate a single line containing the corresponding tree, denoted as described above. Note that, in general, there are many ways to denote such a tree: choose your favourite one</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.bmp"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <h3>Sample Input</h3>
 <pre><code class="language-input">5 2 5 2 6 2 8
 2 3
