--- a/tifa-233.com/题解 - 洛谷 10 月月赛 II & JROI R3.html
+++ b/tifa-233.com/题解 - 洛谷 10 月月赛 II & JROI R3.html
@@ -38,13 +38,13 @@ date: 2021-10-04 18:26:00</li>
 <h2>A - 『JROI-3』R.I.P</h2>
 <h3>题目背景</h3>
 <p>Her Requeim</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A1.webp"/></p>
 <p>我想要肯定你的伦理 但是那是无法实现的</p>
 <p>落幕 ......</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A2.webp"/></p>
 <hr/>
 <p>"早上好, 早上了哟. "</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A3.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A3.webp"/></p>
 <p>声音 停滞</p>
 <p>解去枷锁的双手 毫不犹豫地向前舒展</p>
 <p>那片盛开的花 与放晴的此世都如此美丽 痛苦于此已再无痕迹</p>
@@ -85,9 +85,9 @@ Good
 <h4>样例 1 解释</h4>
 <p>第一组数据: 实测可证, 无法用 $1$ 个栅栏围出 $4$ 个像素格</p>
 <p>第二组数据: 可以考虑围出如下 $4=1 \times 4$ 的像素格</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A4.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A4.webp"/></p>
 <p>用下方的方式只需要用 $14$ 个栅栏即可</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A5.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A5.webp"/></p>
 <p>栅栏宽为 $1+1=2$, 长为 $4+1=5$, $(2+5) \times 2=14$. #### 数据规模与约定</p>
 <blockquote>
 <p><strong>本题采用捆绑测试</strong></p>
@@ -360,7 +360,7 @@ dis 6 2
 <p><strong>样例仅供理解交互过程, 可能不符合逻辑</strong></p>
 </blockquote>
 <p>【样例解释】</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/D1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/D1.webp"/></p>
 <p>树的形态如上</p>
 <p>第一次询问节点 $1$ 的 dfs 序, 为 $1$</p>
 <p>第二次询问节点 $2$ 与节点 $6$ 的距离, 为 $5$</p>
