--- a/young-lord.github.io/Arcaea 的一些破解记录.html
+++ b/young-lord.github.io/Arcaea 的一些破解记录.html
@@ -32,7 +32,7 @@ redirect_from:</p>
 <p>首先，最好不要用Windows，坑太多了（如果你成功了请教教我）</p>
 <p>我们可以用WSL+Ubuntu，以下内容皆基于此基础展开`</p>
 <p>由于目标是<code>aarch64</code>架构，所以需要多架构的gdb（这也就是不用Windows的原因）。执行<code>sudo apt install gdb-multiarch</code>，随后执行<code>gdb-multiarch</code>以确定安装成功</p>
-<p>gdbserver可以在<a href="https://developer.android.google.cn/ndk/downloads?hl=zh-cn">Android NDK</a>的<code>prebuilt/android-arm64/gdbserver/</code>目录下找到，也可以用<a href="/files/gdbserver">我上传的版本</a>（gdbserver 7.11 for arm64，来自NDK 19c for linux）</p>
+<p>gdbserver可以在<a href="https://developer.android.google.cn/ndk/downloads?hl=zh-cn">Android NDK</a>的<code>prebuilt/android-arm64/gdbserver/</code>目录下找到，也可以用<a href="https://github.com/Young-Lord/Young-Lord.github.io/releases/download/assets/gdbserver">我上传的版本</a>（gdbserver 7.11 for arm64，来自NDK 19c for linux）</p>
 <p>把gdbserver丢到<code>/data/local/tmp/</code>目录下，赋予777权限</p>
 <h4>连接</h4>
 <p>手机端打开arc、usb调试开关</p>
