--- a/young-lord.github.io/为安卓编译 SELinux 相关工具.html
+++ b/young-lord.github.io/为安卓编译 SELinux 相关工具.html
@@ -22,7 +22,7 @@ pkg in clang
 cd selinux
 </code></pre>
 <p>编译过程会遇到一堆坑，这里我已经整合成了diff，可以如下方式打补丁：</p>
-<pre><code class="language-shell">wget https://young-lord.github.io/files/selinux-compile-termux.diff
+<pre><code class="language-shell">wget https://github.com/Young-Lord/Young-Lord.github.io/releases/download/assets/selinux-compile-termux.diff
 git apply selinux-compile-termux.diff
 </code></pre>
 <p>然后就可以愉快编译了：</p>
