--- a/young-lord.github.io/我都拿服务器跑些啥.html
+++ b/young-lord.github.io/我都拿服务器跑些啥.html
@@ -3,7 +3,7 @@
 <h2>tags: [服务器]
 title: 我都拿服务器跑些啥
 slug: my-server
-last_modified_at: 2024-2-9</h2>
+last_modified_at: 2024-5-11</h2>
 <h2>正文</h2>
 <h3>文件</h3>
 <ul>
@@ -59,5 +59,5 @@ last_modified_at: 2024-2-9</h2>
 <li>IIS：Windows Server自带的Web服务器，用于反向代理Chisel和一些其他的服务</li>
 <li>Caddy：轻量Web服务器，用于<a href="/posts/caddy-webdav">WebDAV</a></li>
 <li>nginx：用于反向代理一些网站，同时嵌入自定义js</li>
-<li>openresty：目前没怎么用</li>
+<li>openresty：目前没怎么用，貌似可以当作nginx+lua脚本支持？</li>
 </ul>
