--- a/kexizeroing.github.io/Container queries and :has selector.html
+++ b/kexizeroing.github.io/Container queries and :has selector.html
@@ -106,6 +106,17 @@ updatedDate: "Mar 7 2024"</h2>
 <li>The difference between <code>:where()</code> and <code>:is()</code> is that <code>:where()</code> always has 0 specificity, whereas <code>:is()</code> takes on the specificity of the most specific selector in its arguments.</li>
 <li>The <code>:has()</code> pseudo-class itself doesn’t add any specificity weight to the selector. Like <code>:is()</code> and <code>:not()</code>, the specificity of <code>:has()</code> is equal to the highest specificity selector in the selector list.</li>
 </ul>
+<pre><code class="language-js">// Specificity is a triple that has three components (A,B,C)
+const compare = (s1, s2) =&gt; {
+  if (s1.a === s2.a) {
+    if (s1.b === s2.b) {
+      return s1.c - s2.c;
+    }
+    return s1.b - s2.b;
+  }
+  return s1.a - s2.a;
+};
+</code></pre>
 <blockquote>
 <p>A side note: Selectors matching happens from right to left. For example:</p>
 <ul>
