--- a/kexizeroing.github.io/Git knowledge that not clear to me.html
+++ b/kexizeroing.github.io/Git knowledge that not clear to me.html
@@ -150,6 +150,23 @@ When your branches diverge, you have to create a commit to "join" the two branch
 <h2>git log and git reflog</h2>
 <p><code>git log</code> (often use <code>git log --pretty=oneline</code>) shows the current HEAD and its ancestry. That is, it prints the commit HEAD points to, then its parent, its parent, and so on. It traverses back through the repo's ancestry by recursively looking up each commit's parent. Btw, <code>git log --full-history -- src/path/to/file.js</code> helps you find the final version of a deleted file.</p>
 <p><code>git reflog</code> doesn't traverse HEAD's ancestry. The reflog is an ordered list of the commits that HEAD has pointed to: <strong>it's the undo history for your repo</strong>. The reflog isn't part of the repo itself (it's stored separately to the commits themselves and it's purely local). If you accidentally reset to an older commit, or rebase wrongly, or any other operation that visually "removes" commits, you can use the reflog to see where you were before and <code>git reset --hard HEAD@{index}</code> back to that ref to restore your previous state.</p>
+<pre><code class="language-sh">## Recover deleted branch
+## Pre-requisite: You have to know your last commit message from your deleted branch.
+git reflog
+# Search for message in the list
+# a901eda HEAD@{18}: commit: &lt;last commit message&gt;
+
+# Now you have two options, either checkout revision or HEAD
+git checkout a901eda 
+# Or
+git checkout HEAD@{18}
+
+# Create branch
+git branch recovered-branch
+
+# You may want to push that back to remote
+git push origin recovered-branch:recovered-branch
+</code></pre>
 <h2>rename branch</h2>
 <ul>
 <li>Rename the branch while working in this branch: <code>git branch -m &lt;new name&gt;</code>; rename from outside the branch: <code>git branch -m &lt;old name&gt; &lt;new name&gt;</code>.</li>
@@ -172,6 +189,12 @@ When your branches diverge, you have to create a commit to "join" the two branch
 <li><code>git commit --amend --reset-author --no-edit</code> and <code>git rebase --continue</code> to confirm and continue your rebase.</li>
 <li><code>git push --force-with-lease</code> to overwrite the remote history. (<strong><code>--force-with-lease</code> is safer than <code>--force</code></strong>: If a change that someone else made to the remote branch while you were working on your code, you will not overwrite any remote code.)</li>
 </ol>
+<blockquote>
+<p>To fixup a commit:</p>
+<pre><code class="language-sh">git commit --fixup a0b1c2d3
+git rebase -i --autosquash a0b1c2d3~1
+</code></pre>
+</blockquote>
 <p>Another example, I want to squash my last 3 commits together into one commit.</p>
 <ul>
 <li><p>Method 1: <code>git reset --soft HEAD~3 &amp;&amp; git commit</code>. The soft reset just re-points HEAD to the last commit that you do not want to squash. Neither the index nor the working tree are touched, leaving the index in the desired state for your new commit.</p>
