--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -49,6 +49,7 @@ npx shadcn-ui@latest add button
 <ul>
 <li>Remix Tutorial: https://remix.run/start/tutorial</li>
 <li>Remix Templates: https://remix.run/docs/en/main/guides/templates</li>
+<li>Remix for Next.js Developers: https://remixfornextdevs.com</li>
 </ul>
 <pre><code class="language-jsx">export const action = async ({ params, request }: ActionArgs) =&gt; {
   invariant(params.contactId, "Missing contactId param");
@@ -275,10 +276,7 @@ location / {
 <h2>Serverless</h2>
 <p>Your code needs to be hosted on a server. Depending on the size of your code and the amount of users you expect to use your product, you might need many servers. Companies used to have their own facilities and warehouses that held their servers and many still do. But for many, this is not ideal. Servers can be difficult to maintain. Maintaining servers and the buildings that house them can become expensive too. That's where AWS and other <a href="https://getdeploying.com">cloud providers</a> come in.</p>
 <p>Cloud is basically renting out servers and data storage that's owned by someone else (Serverless does not mean there aren't any servers; You still need servers to host and run your code.) Through the cloud provider (AWS, Azure, or Google Cloud), you gain access to resources like storage services, servers, networking, analytics, AI, and more. There are many other benefits: You pay only for what you use. You can easily spin up and use new servers when needed, allowing you to scale quickly. You can deploy applications globally.</p>
-<blockquote>
-<p>Serverless is just a way of handling how you are using servers. Instead of handling all the infrastructure and server operations yourself you're relying on a cloud provider. <em>Self-hosted for control, cloud services (may offer free tiers) for uptime.</em></p>
-</blockquote>
-<p>There are different families of cloud services.</p>
+<p>Serverless is just a way of handling how you are using servers. Instead of handling all the infrastructure and server operations yourself you're relying on a cloud provider. There are different families of cloud services:</p>
 <ul>
 <li><strong>Infrastructure as a service (IaaS)</strong> - Amazon EC2, Digital Ocean</li>
 <li><strong>Platform as a service (PaaS)</strong> - Heroku, AWS Elastic Beanstalk</li>
@@ -286,6 +284,9 @@ location / {
 <li><strong>Function as a service (FaaS)</strong> - AWS Lambda</li>
 </ul>
 <p>Serverless functions are an approach to writing back-end code that doesn’t require writing a back-end. In the simplest terms: we write a function using our preferred language, like JavaScript; we send that function to a serverless provider; and then we can call that function just like any API using HTTP methods. These Functions are co-located with your code and part of your Git workflow. You can focus on the business needs and developing a better quality application instead of worrying about the infrastructure and maintenance of a traditional server.</p>
+<blockquote>
+<p>AWS provides all the necessary building blocks for the modern web. With over 200 services, AWS caters to every aspect of web application infrastructure, including compute, storage, databases, machine learning, and more. Start watching Basic Elements of AWS: https://www.proaws.dev/tutorials/basic-elements-of-aws~hk2qv</p>
+</blockquote>
 <h3>Netlify functions</h3>
 <p>The serverless functions can be run by <a href="https://cli.netlify.com/netlify-dev">Netlify Dev</a> in the same way they would be when deployed to the cloud. Once you've configured the functions directory in your <code>netlify.toml</code>, the functions will be accessible through netlify dev server. e.g. at <code>http://localhost:8888/.netlify/functions/{function-name}</code>.</p>
 <p>Go through the guide (mainly on traditional serverless functions): https://www.netlify.com/blog/intro-to-serverless-functions/</p>
