--- a/tifa-233.com/比赛记录 - CodeCraft-22 and Codeforces Round #795 (Div. 2) (A-D).html
+++ b/tifa-233.com/比赛记录 - CodeCraft-22 and Codeforces Round #795 (Div. 2) (A-D).html
@@ -171,7 +171,7 @@ NO
 <li>if $c_i = 1$, it is a blue segment</li>
 </ul>
 <p>We say that two segments of different colors are connected, if they share at least one common point. Two segments belong to the same group, if they are either connected directly, or through a sequence of directly connected segments. Find the number of groups of segments</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/E-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/E-1.webp"/></p>
 <h3>Input</h3>
 <p>Each test contains multiple test cases. The first line contains the number of test cases $t$ ($1 \le t \le 10^5$). Description of the test cases follows</p>
 <p>The first line of each test case contains a single integer $n$ ($1 \leq n \leq 10^5$) — the number of segments</p>
@@ -241,7 +241,7 @@ $$</p>
 </code></pre>
 <h3>Note</h3>
 <p>The tree in the second example is given below:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1.webp"/></p>
 <p>We have $21$ subsets of size $2$ in the given tree. Hence,</p>
 <p>$$
 S \in \left{{1, 2}, {1, 3}, {1, 4}, {1, 5}, {1, 6}, {1, 7}, {2, 3}, {2, 4}, {2, 5}, {2, 6}, {2, 7}, {3, 4}, {3, 5}, {3, 6}, {3, 7}, {4, 5}, {4, 6}, {4, 7}, {5, 6}, {5, 7}, {6, 7} \right}.
