--- a/tifa-233.com/比赛记录 - Hello 2023.html
+++ b/tifa-233.com/比赛记录 - Hello 2023.html
@@ -423,7 +423,7 @@ $$</p>
 </code></pre>
 <h3>Note</h3>
 <p>Please refer to the following pictures for an explanation of the third test. Only the first $4$ spells are shown since the last $2$ do nothing. The first picture represents the tree initially with the number of stones for each node written above it in green. Changes applied by the current spell are highlighted in red</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1.webp"/></p>
 <h3>代码参考</h3>
 <p>&lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;</p>
@@ -431,7 +431,7 @@ $$</p>
 <h2>G - The Game of the Century</h2>
 <p>The time has finally come, MKnez and Baltic are to host <em>The Game of the Century</em>. For that purpose, they built a village to lodge its participants</p>
 <p>The village has the shape of an equilateral triangle delimited by three roads of length $n$. It is cut into $n^2$ smaller equilateral triangles, of side length $1$, by $3n-3$ additional roads which run parallel to the sides. See the figure for $n=3$. Each of the $3n$ roads is made of multiple (possibly $1$) road segments of length $1$ which connect adjacent intersections</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/G-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/G-1.webp"/></p>
 <p>The direction has already been chosen for each of the $3n$ roads (so, for each road, the same direction is assigned to all its road segments). Traffic can only go in the specified directions (i. e. the roads are monodirectional)</p>
 <p>You are tasked with making adjustments to the traffic plan so that from each intersection it is possible to reach every other intersection. Specifically, you can invert the traffic direction of any number of road segments of length $1$. What is the minimal number of road segments for which you need to invert the traffic direction?</p>
 <h3>Input</h3>
@@ -465,7 +465,7 @@ $$</p>
 </code></pre>
 <h3>Note</h3>
 <p>The first example corresponds to the picture in the statement. There exist multiple solutions that invert the traffic direction of exactly $2$ road segments, but inverting only $1$ road segment never makes it possible to reach every intersection from any other. One of the possible solutions is shown in the picture below in which the inverted road segments are highlighted in blue</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/G-2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/G-2.webp"/></p>
 <p>In the second example, the answer is $0$ since it is already possible to reach every intersection from any other</p>
 <h3>代码参考</h3>
 <p>&lt;details open&gt;
