--- a/tifa-233.com/笔记 - Simpson法与自适应Simpson法.html
+++ b/tifa-233.com/笔记 - Simpson法与自适应Simpson法.html
@@ -25,7 +25,7 @@ date: 2020-10-02 22:23:57</li>
 <h2>Simpson 法</h2>
 <p>Simpson 法是一种常见的数值积分算法, 其思想是用几段抛物线去拟合原曲线, 从而近似求出其面积</p>
 <p>放一张从维基拿的图</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <p>其中 $f(x)$ 为原函数, $P(x)$ 为拟合函数</p>
 <p>本篇内容如无特殊说明, 均有如下假定:</p>
 <ul>
@@ -72,7 +72,7 @@ $$</p>
 <h2>复化 Simpson 法</h2>
 <p>就是把 $[a,b]$ 拆成多个等长小区间, 每个区间应用 Simpson 法后拼合在一起</p>
 <p>放一张从维基拿的动图</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/2.gif"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/2.webp"/></p>
 <p>这张动图展示了多次细分应用复化 Simpson 法的拟合效果</p>
 <h3>流程</h3>
 <p>令</p>
