--- a/tifa-233.com/随笔 - Java: 基于 ScriptEngine 和 Swing 的极简科学计算器.html
+++ b/tifa-233.com/随笔 - Java: 基于 ScriptEngine 和 Swing 的极简科学计算器.html
@@ -22,7 +22,7 @@ tags:</li>
 <p>Nashorn JavaScript Engine 已于 Java 15 移除, 于 Java 11 废弃<a href="%5BJDK-8236933%5D(https://www.oracle.com/java/technologies/javase/15-relnote-issues.html#JDK-8236933)">^1</a></p>
 </blockquote>
 <h2>界面</h2>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/screenshot.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/screenshot.webp"/></p>
 <h2>代码</h2>
 <p>&lt;details open&gt;
 &lt;summary&gt;&lt;font color='orange'&gt;Show code&lt;/font&gt;&lt;/summary&gt;</p>
