--- a/tifa-233.com/题解 - 2020 ICPC 亚洲区域赛(昆明) 热身赛.html
+++ b/tifa-233.com/题解 - 2020 ICPC 亚洲区域赛(昆明) 热身赛.html
@@ -29,7 +29,7 @@ date: 2021-04-04 00:04:28</li>
 <h2>A - Meditation</h2>
 <p>1000ms / 256 MB</p>
 <h3>题目描述</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A-1.webp"/></p>
 <p>Luna had a stressful day and she wants to do a meditation routine that relaxes her well. Luna's routines are more or less relaxing and to determine how relaxing a routine is, Luna computes its score: the higher the score, the more relaxing it is!</p>
 <p>Luna has graded each of the $n$ exercises with a positive integer and the score of a routine is simply the sum of the grades of its individual exercises. She gives you her list of graded exercises and asks you what is the maximal grade of a routine composed of $k$ different exercises</p>
 <h3>输入描述</h3>
@@ -59,7 +59,7 @@ The $n$ following lines each contain a single integer, the $i+1$-th line contain
 <h2>B - Rounds</h2>
 <p>1000ms / 256 MB</p>
 <h3>题目描述</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B-1.webp"/></p>
 <p>The popular PefectSharp online group gathers fans of workouts and healthy lifestyle all over the world. Every group member has managed to gain a certain amount of credits for the trendy MV03 online sports platform, giving them access to various workout and relaxation resources</p>
 <p>The amount of credits owned may however largely differ from one person to the other. Since PefectSharp members value sharing and solidarity, they decide to redispatch credits by playing the following game:</p>
 <p>The $N$ group members are numbered from $1$ to $N$ and the game comprises $k$ rounds, for some integer $k$ such that $1 \leq k \leq N$. During the $i$-th round of the game, all members except member $i$ give $S$ credits to member $i$. The game may end after any round, and its outcome will be the minimum amount of credits held by a member of the group after that round</p>
@@ -102,7 +102,7 @@ Each of the $N$ following lines contains a single integer, the $i + 1$-th line c
 <h2>C - Statues</h2>
 <p>1000ms / 256 MB</p>
 <h3>题目描述</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-1.jpg"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/C-1.webp"/></p>
 <p>To escape the loneliness of working remotely everyday, Erika decided to try on a new hobby: sculpture. She already has a large collection of statues and the municipality has allowed her to show her art outside</p>
 <p>Erika wants her statues to be well visible and thus each statue needs to be placed under a distinct street light. Further, the arrangement should be aesthetic which means that the statues should be placed by increasing size with the smallest statues near the beginning of the street and the biggest ones near the end</p>
 <p>Erika placed her statues but she forgot to place them in increasing size and now she has to reposition them in accordance to both of her desires</p>
