--- a/tifa-233.com/题解 - Codeforces Round #639 Div. 2 (A-D).html
+++ b/tifa-233.com/题解 - Codeforces Round #639 Div. 2 (A-D).html
@@ -27,13 +27,13 @@ date: 2020-05-07 00:07:49</li>
 <h2>A. Puzzle Pieces</h2>
 <h3>题意</h3>
 <p>有 $n\times m$ 个完全相同的拼图块, 每个均一凹三凸, 如图</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A_1.bmp"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A_1.webp"/></p>
 <p>问对给定的 $n$ 和 $m$, 能不能拼出 $n\times m$ 的矩形</p>
 <h3>思路与做法</h3>
 <p>不妨假设 $n\leqslant m$</p>
 <p>首先当 $n=1$ 时和 $n=m=2$ 时显然可以</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A_2.bmp"/></p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A_3.bmp"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A_2.webp"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/A_3.webp"/></p>
 <p>而如果想拼出 $n\times m,2&lt;n\leqslant m$ 的矩形, 必然需要先拼出 $(n-1)\times m$ 和 $n\times(m-1)$ 的矩形</p>
 <p>观察发现, 如果矩形可以拼出, 则每条拼图块的公共边必然为一凹一凸, 可以发现 $m=3$ 和 $n=3$ 时的矩形一共 $7$ 条公共边, 但所有拼图块一共只有 $6$ 个凹边</p>
 <p>故可能的情况只有 $n=1$ 时和 $n=m=2$ 时</p>
@@ -46,7 +46,7 @@ date: 2020-05-07 00:07:49</li>
 <h3>题意</h3>
 <p>输入 $n$, 计算能搭出几个卡牌金字塔</p>
 <p>图示即为卡牌金字塔高度 $h=1,2,3$ 时的情况</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B_1.bmp"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/B_1.webp"/></p>
 <h3>思路与做法</h3>
 <p>易得高度为 $h$ 的卡牌金字塔所消耗的卡牌总数为 $\frac{1}{2}(3h^2+h)$</p>
 <p>所以直接打个表然后二分查找就好了</p>
