--- a/tifa-233.com/题解 - Codeforces Round #793 (Div. 2) (A-D).html
+++ b/tifa-233.com/题解 - Codeforces Round #793 (Div. 2) (A-D).html
@@ -230,10 +230,10 @@ YES
 </code></pre>
 <h3>Note</h3>
 <p>In the first test case, the tree looks as follows:</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/D-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/D-1.webp"/></p>
 <p>In the second test case, there is only one possible tree with an edge between $1$ and $2$, and it does not satisfy the degree constraints</p>
 <p>In the third test case,</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/D-2.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/D-2.webp"/></p>
 <h3>题意简述</h3>
 <p>在一个圆上的 $n$ 等分点上建树, 要求</p>
 <ul>
@@ -363,12 +363,12 @@ YES
 <p>In the <strong>first query</strong>, the maximum possible flow is $1$ i.e one unit from source to $2$, then one unit from $2$ to $3$, then one unit from $3$ to sink. The cost of the flow is $0 \cdot 1 + |2 - 4| \cdot 1 + 0 \cdot 1 = 2$</p>
 <p>In the <strong>second query</strong>, the maximum possible flow is again $1$ i.e from source to $7$, $7$ to $6$, and $6$ to sink with a cost of $0 \cdot |10 - 10| \cdot 1 + 0 \cdot 1 = 0$</p>
 <p>In the <strong>third query</strong>, the flow network is shown on the left with capacity written over the edge and the cost written in bracket. The image on the right shows the flow through each edge in an optimal configuration</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-1.webp"/></p>
 <p>Maximum flow is $3$ with a cost of $0 \cdot 3 + 1 \cdot 1 + 4 \cdot 2 + 0 \cdot 1 + 0 \cdot 2 = 9$</p>
 <p>In the <strong>fourth query</strong>, the flow network looks as –
-<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-2.png"/></p>
+<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-2.webp"/></p>
 <p>The minimum cost maximum flow is achieved in the configuration –
-<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-3.png"/></p>
+<img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/F-3.webp"/></p>
 <p>The maximum flow in the above network is 4 and the minimum cost of such flow is 15</p>
 <h3>题意简述</h3>
 <h3>解题思路</h3>
