--- a/tifa-233.com/题解 - [Luogu P1337] [JSOI2004] 平衡点 _ 吊打XXX.html
+++ b/tifa-233.com/题解 - [Luogu P1337] [JSOI2004] 平衡点 _ 吊打XXX.html
@@ -24,7 +24,7 @@ date: 2021-11-09 14:02:15</li>
 <p>如图: 有 n 个重物, 每个重物系在一条足够长的绳子上. 每条绳子自上而下穿过桌面上的洞, 然后系在一起. 图中 X 处就是公共的绳结. 假设绳子是完全弹性的 (不会造成能量损失), 桌子足够高 (因而重物不会垂到地上), 且忽略所有的摩擦</p>
 <p>问绳结 X 最终平衡于何处</p>
 <p>注意: 桌面上的洞都比绳结 X 小得多, 所以即使某个重物特别重, 绳结 X 也不可能穿过桌面上的洞掉下来, 最多是卡在某个洞口处</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.jpg"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <h3>输入输出格式</h3>
 <h4>输入格式</h4>
 <p>文件的第一行为一个正整数 n (1≤n≤1000), 表示重物和洞的数目. 接下来的 n 行, 每行是 3 个整数: Xi.Yi.Wi, 分别表示第 i 个洞的坐标以及第 i 个重物的重量. (-10000≤x,y≤10000, 0&lt;w≤1000)</p>
