--- a/tifa-233.com/题解 - [Luogu P3183] [HAOI2016] 食物链.html
+++ b/tifa-233.com/题解 - [Luogu P3183] [HAOI2016] 食物链.html
@@ -23,7 +23,7 @@ date: 2020-01-15 10:59:32</li>
 <p>&lt;!-- more --&gt;</p>
 <h2>原始题面</h2>
 <h3>题目描述</h3>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.png"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <p>如图所示为某生态系统的食物网示意图, 据图回答第 1 小题</p>
 <p>现在给你 $n$ 个物种和 $m$ 条能量流动关系, 求其中的食物链条数.</p>
 <p>物种的名称为从 $1$ 到 $n$ 编号</p>
