--- a/tifa-233.com/题解 - [POJ 2309] BST.html
+++ b/tifa-233.com/题解 - [POJ 2309] BST.html
@@ -24,7 +24,7 @@ date: 2020-07-30 22:03:05</li>
 <h2>原始题面</h2>
 <h3>Description</h3>
 <p>Consider an infinite full binary search tree (see the figure below), the numbers in the nodes are 1, 2, 3, .... In a subtree whose root node is X, we can get the minimum number in this subtree by repeating going down the left node until the last level, and we can also find the maximum number by going down the right node. Now you are given some queries as "What are the minimum and maximum numbers in the subtree whose root node is X?" Please try to find answers for there queries</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.bmp"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <h3>Input</h3>
 <p>In the input, the first line contains an integer N, which represents the number of queries. In the next N lines, each contains a number representing a subtree with root number X ($1 \leqslant X \leqslant 2^{31} - 1$)</p>
 <h3>Output</h3>
@@ -42,7 +42,7 @@ date: 2020-07-30 22:03:05</li>
 <p>POJ Monthly,Minkerui</p>
 <h2>题意简述</h2>
 <p>给出 $x$, 输出在满二叉搜索树(如下图)中, 以 $x$ 为根的子树中的最小结点编号和最大结点编号</p>
-<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.bmp"/></p>
+<p><img alt="" src="/media/wwww/share/study/聚聚/源数据/博客聚合/tifa-233.com/source/_posts/1.webp"/></p>
 <h2>解题思路</h2>
 <p>在上图中随便找几个例子就能发现</p>
 <ul>
