--- a/young-lord.github.io/安卓使用 PN532 读写 NFC.html
+++ b/young-lord.github.io/安卓使用 PN532 读写 NFC.html
@@ -122,9 +122,9 @@ make
 <h4>如果你在用Arch</h4>
 <p>直接<code>yay -S termcap gcc-arm-none-eabi-bin &amp;&amp; git clone https://github.com/Proxmark/proxmark3 --depth 1 &amp;&amp; cd proxmark3 &amp;&amp; wget https://github.com/Proxmark/proxmark3/commit/ee8491b04a5ef3950c2fdc1dd2c2a14706247e7e.diff &amp;&amp; git apply ee8491b04a5ef3950c2fdc1dd2c2a14706247e7e.diff &amp;&amp; make clean &amp;&amp; make all</code>即可。</p>
 <p>make完成后，你可以得到<code>client/</code>目录，<code>cd</code>进入此目录。</p>
-<p>下载<code>txt_to_bin.py</code>（本文件由Copilot Chat转换为Python 3代码），并将<code>0x1111aaaa_003A.txt</code>转换为<code>1111aaaa_generated.bin</code>，重命名为<code>nonces.bin</code>丢到<code>client/</code>目录下。</p>
+<p>下载<a href="https://github.com/Young-Lord/Young-Lord.github.io/releases/download/assets/nfc_txttobin.py">nfc_txt_to_bin.py</a>，并将<code>0x1111aaaa_003A.txt</code>转换为<code>1111aaaa_generated.bin</code>，重命名为<code>nonces.bin</code>丢到<code>client/</code>目录下。</p>
 <pre><code class="language-shell">cd client
-wget https://young-lord.github.io/files/nfc_txttobin.py
+wget https://github.com/Young-Lord/Young-Lord.github.io/releases/download/assets/nfc_txttobin.py
 python3 nfc_txttobin.py 0x1111aaaa_003A.txt 1111aaaa
 mv 1111aaaa_generated.bin nonces.bin
 # 进入交互式命令行，串口号相关报错不用理
