--- a/young-lord.github.io/小米 Mix 2S 修改开机第一屏.html
+++ b/young-lord.github.io/小米 Mix 2S 修改开机第一屏.html
@@ -16,7 +16,7 @@ redirect_from:</p>
 <pre><code class="language-shell">su -c dd if=/dev/block/by-name/logo of=logo.orig.bak
 </code></pre>
 <p>在Termux中执行以下操作前，请确保Termux已经安装Python 3并且被授予了root权限。</p>
-<p>下载<a href="/files/mix2s_logo_modify.py">这个文件</a>，在与此文件相同目录放置以下文件（不放置则表示不替换此项）。<strong>注意，此处的bmp文件尺寸必须与原文件尺寸一致，色深必须为24bit！</strong></p>
+<p>下载<a href="https://github.com/Young-Lord/Young-Lord.github.io/releases/download/assets/mix2s_logo_modify.py">这个文件</a>，在与此文件相同目录放置以下文件（不放置则表示不替换此项）。<strong>注意，此处的bmp文件尺寸必须与原文件尺寸一致，色深必须为24bit！</strong></p>
 <ul>
 <li>logo1.bmp（最早显示，没有“已解锁”标志的第一屏）（1080x2160，竖向）</li>
 <li>logo2.bmp（在logo1.bmp大概0.2秒后显示，有“已解锁”标志的第一屏）（1080x2160，竖向）</li>
@@ -29,7 +29,7 @@ redirect_from:</p>
 <h2>其它</h2>
 <p>24位色深的bmp文件是不压缩的，因此根据尺寸、色深（此处是24bit）就可以确认所需存储空间。</p>
 <p>一些相关命令：</p>
-<pre><code class="language-shell">wget https://young-lord.github.io/files/mix2s_logo_modify.py
+<pre><code class="language-shell">wget https://github.com/Young-Lord/Young-Lord.github.io/releases/download/assets/mix2s_logo_modify.py
 convert logo1.png logo1.bmp
 mogrify -format bmp *.png
 exiftool *.bmp
