--- a/young-lord.github.io/科学苗子游记.html
+++ b/young-lord.github.io/科学苗子游记.html
@@ -1,31 +1,69 @@
 <h2><a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/_posts/2023-12-01-%E7%A7%91%E5%AD%A6%E8%8B%97%E5%AD%90%E6%B8%B8%E8%AE%B0.md">仓库源文</a>，<a href="https://young-lord.github.io/posts/axis-2023">站点原文</a></h2>
 <hr/>
-<h2>tags: [生活, '#TODO']
+<h2>tags: [生活]
 title: 科学苗子游记
 slug: axis-2023
-last_modified_at: 2024-2-9</h2>
+last_modified_at: 2024-5-12</h2>
+<p>多年以后，他会想起2023年1月1日凌晨，那个为Ubuntu Wayland上的腾讯会议配虚拟摄像头投屏的凌晨。</p>
 <h2>正文</h2>
 <h3>夏令营之前</h3>
-<p>TODO</p>
+<p>两次选拔，第一次是填写个人资料，第二次是提交对已有研究的复现或分析、面试。我是一个人过了，毕竟有安卓开发基础还是挺容易搞定的。这里不建议花费太多时间，熟悉一下大致内容即可。（顺带一提，如果你不确定要学什么可以先不学，我们组打着机器学习的名义，做的却是LLM应用。）</p>
+<p>接下来基本就是和队里的人准备你们的内容了。这边建议先打一个比较好的架构而非随便写个玩具，最好后面略微改动就能用，而不是像我们一样花了很长时间推翻重做。</p>
 <h3>吃住</h3>
 <p>住在深圳明德实验学校，宿舍条件相当烂，并且夜间断电。</p>
-<p>除了周末在明德，平时吃饭在南科大食堂。明德的饭基本是相当一般的盒饭，南科大的饭则相当好并且可以任意吃，并每天领取饮料/水果。在明德的周末偶尔会举办一个pizza day，貌似总共有两次？</p>
-<p>开营、结营时会在腾讯滨海大厦吃饭，这个则相当高档。</p>
+<p>除了周末在明德，平时吃饭在南科大食堂。明德的饭基本是相当一般的盒饭，南科大可从米饭、肠粉到饺子、面条等菜品中任选，并每天领取饮料/水果。在明德的周末偶尔会举办一个pizza day，貌似总共有两次？</p>
+<p>开营、结营时会在腾讯滨海大厦吃饭，这个则相当香。</p>
+<p>在结题报告后，你可以享受人生最压抑的一顿饭，感受看着各位大佬导师欢快交流而自己一句话不敢说的尴尬。</p>
 <h3>科研</h3>
-<p>TODO</p>
+<p>工作时间在教室做科研（代码，debug，evaluation，论文，PPT）</p>
 <h4>开放的知识</h4>
-<p>TODO：这里主要写Sci-Hub与Z-Library</p>
-<h3>讲座</h3>
-<p>TODO</p>
+<p>提前体验学阀特色，笑。</p>
+<p>Sci-Hub在我们的研究主线中其实并没有用到，论文都来自 导师/arXiv/作者公开，但它在我们去看一些参考文献的时候相当有用。如果没了导师，相当一部分文献其实是被锁在付费墙后面的。</p>
+<p>Z-Library让我能够预览众多数学、计算机相关书籍，从而避免碰到<a href="https://book.douban.com/subject/26708119">名不副实的垃圾</a>。（当然我们也必须感谢<a href="https://www.ituring.com.cn/">图灵社区</a>，毕竟有魄力提供DRM-free资源的商城在现在不多了）</p>
+<p>这就不得不提在明德自习室发生的趣事了：那里是有WiFi的，但由于流量异常，几天后要求不能在这个网挂梯子。</p>
+<h2>活动</h2>
+<p>很多，可比科研多多了。</p>
+<p>开营时的破冰————即团体活动，包括但不限于自我介绍、猜歌、团体运动、组建社群（e.g., 音游群（很遗憾地只有一次活动）、CTF群）、团体桌游；</p>
+<p>营中：</p>
+<ul>
+<li>一堆讲座（选听、必听都有），包括各个学科的（主要是科普向），有个提问环节（并且提问有概率获得🐧玩偶一个）</li>
+<li>CPR学习、腾讯讲师交流（这个一定要选大众的 :( ）、动捕基地参观、演唱会、博物馆无障碍义工、百科知识竞赛等。</li>
+</ul>
+<p>营末：结营答辩（如果算的话）、项目海报展示</p>
 <h3>娱乐</h3>
-<h4>交友</h4>
-<p>TODO</p>
 <h4>CTF</h4>
-<p>一起打了<a href="https://ctf.amateurs.team">AmateursCTF</a>，于是出现了algo全解而pwn一道都做不出来的奇观。</p>
+<p>一起打了<a href="https://ctf.amateurs.team">AmateursCTF</a>，于是出现了algo全解而pwn一道都做不出来的奇观。也充分展现了我有多菜，只能在misc刷刷分。值得一提的是，某人在一道发邮件要源码的题深夜公开后第一时间搞出正解，却因为没有及时查看邮件而痛失一血。</p>
+<p>营后又被拉去打了<a href="https://ctf.dicega.ng/">DiceCTF</a>和<a href="https://www.picoctf.org/">picoCTF</a>，前者基本无贡献，后者因为很水所以做出来了1/2，并入门了pwn。&lt;del&gt;并强烈谴责了这群人拉高二下学期学生工作日打CTF的行为。&lt;/del&gt;</p>
+<h4>企鹅</h4>
+<p>毕竟是个企鹅的活动，企鹅是无处不在的。比如滨海走廊末阴森的企鹅（我们称为<em>杀戮企鹅</em>）、腾讯大厦里的防诈骗等身企鹅模型、讲座时的企鹅玩偶、腾讯大厦里被<a href="https://mirrors.tuna.tsinghua.edu.cn/">tuna</a> ban掉的访客网络、每周抽奖得到的腾讯其他活动的残次品，或者各种证书和口罩。</p>
+<h4>ACG</h4>
+<h5>动画与漫画</h5>
+<p>整个科苗期间我陆续推完了《别当欧尼酱了》、《少女终末旅行》与《蘑菇的拟态日常》。</p>
+<h5>游戏</h5>
+<p>我自己的话是深夜云通了<a href="https://www.zhihu.com/question/316202065/answer/2383882933">四大日式恐怖RPG</a>，虽然挺有年代感了，但仍然足够神。白天打了Alice In Cradle。夏令营结束后的暑假几天，高强度推完了樱之诗与魔宴，前者给我的震撼远远超过了素晴日，甚至为了它水了篇狗屁不通的blog。</p>
+<p>然后我们一群人能一起打的————MC，启动！（虽然PVP（包括字面意思上的CTF）和纯生存都打得一般，并且被某人的<code>/kill @e</code>彻底破坏了体验）。理论上有个音游群，但只在结营的时候玩了一下。结合一些其他联机经历，我们称其“电竞苗子”。</p>
+<p>结营典礼上，还进行了一个“星铁，启动！”和“Arcaea，启动”！&lt;del&gt;以致敬我们的队名“源神队”&lt;/del&gt;</p>
 <h3>健康</h3>
 <p>明德的运动场地挺全的，还有个地下羽毛球场。很不幸的是，由于我全程宅宿舍/南科大教室（改代码/打CTF/打rpg/推gal），所以没怎么去运动。而且晚上一般一点左右才睡。因为这些，疑似新冠后遗症的心率过快貌似加重了。</p>
+<h3>其它</h3>
+<p>南科大的教室影音效果还是挺好的，很适合午休看《空中浩劫》。</p>
+<p>我们队里的某两位人在一个夜晚互相帮对方抽卡，然后都歪了。</p>
+<p>每天上午在南科大吃完饭会挤公交去教室，这段时间挺适合拿来进行一些翻译和读RSS。</p>
+<p>配环境是个足够乐的事。毕竟我们的环境总共有 Ubuntu / Termux chroot Arch Linux / Windows 11 / Windows Server 2019 之类的，再加上 实体机/虚拟机，本地/CI，这边不建议在arm之类的奇怪环境下搞开发。</p>
+<p>在代码库形成初期不建议多机协作开发，不然git merge是相当地狱的一个事。</p>
+<p>花了很长时间搞Android上的Repainter &amp; Wallpaper Engine，但也就图个新鲜而已。</p>
+<p>为了致敬腾讯的ToS，在滨海大厦里进行了<a href="https://github.com/QQBackup/QQ-History-Backup">QQ-History-Backup</a>启动。</p>
+<p>有个人给别人推荐机场却忘了加返利链接，是谁呢？</p>
 <h3>夏令营之后</h3>
-<p>TODO</p>
+<p>我们组是花了近一个学期改程序、跑eval、写论文，并花了一周准备答辩，然后——就这样了。评奖结果是在寒假打Ingress的时候收到的，证书则是在开学后。</p>
 <h2>后记</h2>
-<p>一首最贴合感受的音乐。神曲。</p>
 <p><a href="https://music.163.com/#/song?id=528271233">We Want To Run - Frums</a></p>
+<p>暑假结束，开学不久以后，我偶然听到了这首Frums的歌，感觉到了某种触动，因此把它摆在了这里。</p>
+<p>什么触动呢？歌名这个<em>Run</em>就很容易让人想到“润”。科苗，如上文所述，几乎除了包括我在内的几个都是出国的。尽管深入了解不多，但我还是感到有一种不同于我身边任何人的……自由？或因这个产生的独特？比如给<a href="https://github.com/JettChenT/taichi">Taichi Lang</a>写测试用例的Jett，和我们一起打MC、音游和CTF的Ana，给我们拍了张照的Li，另一个用Arch的物理人。（虽然其他非国际人也有让我印象深刻的，但在此略去不表）去探索自己的生活，这不是我一直在追寻的吗？尽管如此，虽然我对我国现状也不是很满意，但我知道，我生来就已经不可能了。我的家庭没那么高贵，也有一些变故（某人如果在读的话，应该是知道的），所以说这应该不是重点。</p>
+<p>我觉得，科苗是给我的更多是一种解脱——从重压的学习、生活中，有一个逃避的借口。我可以去玩GPT，打CTF，写paper，打RPG，或是跟Leo学最新最热Linux黑科技和Python包管理器，在一年投入其中而与常人不同。</p>
+<p>现在，梦醒了——希望如此。</p>
+<p>&lt;!--还是手写好…--&gt;</p>
+<p>&lt;!-- 一些想到的相关玩意，或许改改可以当标题
+因果交流下的光辉
+褪去光环，我们依然不落凡尘
+曾经沧海难为水，除却巫山不是云。--&gt;</p>
