--- a/young-lord.github.io/解包 Arcaea_NS.html
+++ b/young-lord.github.io/解包 Arcaea_NS.html
@@ -10,7 +10,7 @@ redirect_from:</p>
 </ul>
 <hr/>
 <h3>你需要的文件</h3>
-<p>（<a href="/files/ARCAEA_SWITCH_DEPACK.zip">点我下载</a>）</p>
+<p>（<a href="https://github.com/Young-Lord/Young-Lord.github.io/releases/download/assets/ARCAEA_SWITCH_DEPACK.zip">点我下载</a>）</p>
 <p><img alt="需要的文件列表：我提供的工具箱、Arcaea的nsp文件、我提供的py文件" src="https://i.loli.net/2021/06/05/Czkpi627l4yFdTv.png"/></p>
 <p><strong>不提供Arcaea的游戏文件</strong></p>
 <h3>开始解包</h3>
